Update .NET Framework and .NET Core.md

--- a/Document/C#/.NET Framework and .NET Core.md
+++ b/Document/C#/.NET Framework and .NET Core.md
@@ -28,4 +28,4 @@
  
 
 #### 경량화
-- 필요한 패키지는 나중에 추가할 수 있는 특징 탓에 .NET Core는 .NET Framework에 비해 가벼운 편에 속합니다. 매번 새로운 버전이 릴리즈 될 때에도 무거운 .NET Framework 보다 .NET Core의 릴리즈 주기가 더 빠르며, 프레임워크 전체가 아닌 모듈별로 버전 업데이트가 진행되기 때문에 업데이트에 따른 사이즈 이펙트도 최소화할 수 있습니다.
+- 필요한 패키지는 나중에 추가할 수 있는 특징 탓에 .NET Core는 .NET Framework에 비해 가벼운 편에 속합니다. 매번 새로운 버전이 릴리즈 될 때에도 무거운 .NET Framework 보다 .NET Core의 릴리즈 주기가 더 빠르며, 프레임워크 전체가 아닌 모듈별로 버전 업데이트가 진행되기 때문에 업데이트에 따른 사이 이펙트도 최소화할 수 있습니다.
