Update .NET Framework and .NET Core.md

--- a/Document/C#/.NET Framework and .NET Core.md
+++ b/Document/C#/.NET Framework and .NET Core.md
@@ -17,7 +17,7 @@
 
 #### 모듈화
 
-- .NET Framework는 윈도우 애플리케이션을 만들기 위해 필요한 많은 기능들을 포함하고 있습니다. 여기서 .NET Framework는 해당 라이브러리들을 하나의 싱글 패키지 않에 전부 포함합니다.
+- .NET Framework는 윈도우 애플리케이션을 만들기 위해 필요한 많은 기능들을 포함하고 있습니다. 여기서 .NET Framework는 해당 라이브러리들을 하나의 싱글 패키지에 전부 포함합니다.
 - .NET Core는 모듈화를 지원하는 방식입니다. .NET Framework 와는 달리 .NET Core는 Windows 와 분리되어져 있으며 초기 시스템을 설치할 때에도 .NET Core의 모든 기능이 아닌 필요한 최소한의 코어 라이브러리들만 설치됩니다. 이후 추가로 필요한 기능들이 생긴다면 Nuget, Docker 등과 연동하여 그때그때 필요한 패키지를 받을 수 있습니다.(마이크로 서비스 아키텍처)
 
 
