Update .NET Core Primitives.md

--- a/Document/C#/.NET Core Primitives.md
+++ b/Document/C#/.NET Core Primitives.md
@@ -77,3 +77,16 @@ The deps.json file is a dependencies manifest. It can be used to configure dynam
 - Shared framework (configured via runtimeconfig.json)
 
 Among other things, the deps.json file defines a list of dependencies that can be dynamically linked. Normally, this file is machine-generated, and can get really big and complicated for a real-world app. But, it’s plaintext, so we can craft it with just an editor.
+
+#### 추가 설명
+
+- [참고 : Runtime Configuration Files]((https://github.com/dotnet/cli/blob/v2.0.0/Documentation/specs/runtime-configuration-file.md#runtime-configuration-files))
+
+- runtime configuration files 은 애플리케이션의 의존성(dependencies) 정보와 더불어서 런타임 설정 옵션들을 포함합니다. 예를 들어서 가비지 컬렉션 모드 등이 있습니다. 또한 런타임 컴파일에 대한 정보들 역시 포함될 수 있습니다.
+- 만약 MyApp 이라는 프로젝트가 컴파일된다면 아래의 파일들이 생성됩니다. (Windows 기준)
+  - `MyApp.dll` - The managed assembly for MyApp, including an ECMA-compliant entry point token.
+  - `MyApp.exe` - A copy of the corehost.exe executable.
+  - `MyApp.runtimeconfig.json` - An optional configuration file containing runtime configuration settings.
+  - `MyApp.deps.json` - A list of dependencies, as well as compilation context data and compilation dependencies. Not technically required, but required to use the servicing or package cache/shared package install features.
+
+- `MyApp.runtimeconifg.json` 은 사용자가 직접 수정가능합니다. 그렇지만 `MyApp.deps.json` 파일은 그렇지 않은데 자동화된 도구에 의해 생성되기 때문입니다. 또한 deps 파일은 이 점을 분명히 해야 하므로 Json 이 아닌 다른 포맷을 활용합니다.
