--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -2,3 +2,46 @@
 
 ![](Image/2022-01-18-01-27-16.png)
 
+## 1. 도메인 주도 설계란?
+
+- 도메인은 '영역'이라는 뜻이다. 특히 소프트웨어 개발에서 말하는 도메인은 '프로그램이 쓰이는 대상 분야'라는 의미로 쓰인다. 여기서는 더 중요한 것은 도메인이 무엇인지보다는 도메인에 포함되는 것이 무엇인가 하는 것이다.
+  - 도메인에 포함되는 개념은 시스템의 대상 분야가 무엇인지에 따라 크게 달라진다.
+
+**모델링이란??**
+
+- 모델은 현실에 일어나느 사건 혹은 개념을 추상화한 개념이다. 추상이란 여러 사물 혹은 개념에서 공통적인 것을 뽑아 파악하는 것으로, 현실의 모든 것을 반영하는 것이 아니다. 상황에 따라 취사선택이 필요하다. 무엇을 버리고 무엇을 취할지는 도메인에 따라 결정된다.
+
+- 도메인의 개념을 빠짐없이 표현하는 것은 매우 어렵다. 표현에 제약이 많은 코드로 나타내야 한다면 더욱더 그렇다. 그러나 코드로 나타낼 대상을 소프트웨어가 맡은 바 역할을 다하기 위해 필요한 정보로 한정한다면, 현실적으로 실현하는 데 문제가 없다. 물류 시스템으로 예를 들면, 트럭은 '화물을 나를 수 있다' 는 성질만 표현해도 충분하다. '차 키를 돌리면 엔진에 시동이 걸린다' 와 같은 정보까지 나타낼 필요는 없다.
+
+- 도메인 모델은 처음부터 정해진 것이 아니다. 도메인 분야의 관계자는 도메인 개념에 대한 지식은 있어도 소프트웨어에 대한 지식은 없다. 반면 개발자는 소프트웨어에 대한 지식은 있어도 도메인 개념에 대한 지식이 없다. 도메인 문제를 해결하는 소프트웨어를 만들려면 각 분야의 두 사람이 협력하여 도메인 모델을 만들어야 한다.
+
+**지식을 코드로 나타내는 도메인 객체**
+
+- 도메인 모델을 소프트웨어 형태의 동작하는 모듈로 나타낸 것이 도메인 객체다.
+  - 어떤 도메인 모델을 도메인 객체로 구현할지도 중요한 문제다. 개발자는 정말로 유용한 모델과 그렇지 않은 모델을 구분해야 한다. 오랜 시간을 들여 만든 도멩니 모델이 있어도 해당 모델이 이용자의 문제를 해결하는 것과 관계가 없다면 이를 도메인 객체로 구현하는 것은 쓸데없는 작업일 뿐이다.
+
+## 2. 시스템 특유의 값을 나타내기 위한 '값 객체'
+
+## 3. 생애주기를 갖는 객체 - 엔티티
+
+## 4. 부자연스러움을 해결하는 도메인 서비스
+
+## 5. 데이터와 관계된 처리를 분리하자 - 리포지토리
+
+## 6. 유스케이스를 구현하기 위한 '애플리케이션 서비스'
+
+## 7. 소프트웨어의 유연성을 위한 의존 관계 제어
+
+## 8. 소프트웨어 시스템 구성하기
+
+## 9. 복잡한 객체 생성을 맡길 수 있는 팩토리 패턴
+
+## 10. 데이터의 무결성 유지하기
+
+## 11. 애플리케이션 밑바닥부터 만들기
+
+## 12. 도메인의 규칙을 지키는 '애그리게이트 Aggregate'
+
+## 13. 복잡한 조건을 나타내기 위한 '명세'
+
+## 14. 아키텍처
