도메인 주도 설계 철저 입문 2장

--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -22,6 +22,23 @@
 
 ## 2. 시스템 특유의 값을 나타내기 위한 '값 객체'
 
+- 프로그래밍 언어에는 원시 데이터 타입이 있다. 이 원시 데이터 타입만 사용해 시슽메을 개발할 수도 있지만, 때로는 시스템 특유의 값을 정의해야 할 때가 있다. 이러한 시스템 특유의 값을 표현하기 위해 정의하는 객체를 값 객체라고 한다.
+- 값 객체는 원시 데이터 타입이 아닐 수도 있다. 시스템에서 어떤 처리를 해야 하는지에 따라 값을 나타내는 적합한 표현이 정해진다.
+
+- 값의 성질로는 대표적으로 다음 세 가지를 꼽을 수 있다.
+  - 변하지 않는다.
+  - 주고받을 수 있다.
+  - 등가성을 비교할 수 있다.
+
+**값 객체를 도입했을 때의 장점**
+
+아래 네 가지 모두 간단하지만, 시스템을 보호하는 데는 크게 도움이 된다.
+
+- 표현력이 증가한다.
+- 무결성이 유지된다.
+- 잘못된 대입을 방지한다.
+- 로직이 코드 이곳저곳에 흩어지는 것을 방지한다.
+
 ## 3. 생애주기를 갖는 객체 - 엔티티
 
 ## 4. 부자연스러움을 해결하는 도메인 서비스
