도메인 주도 설계 철저 입문 3장

--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -41,6 +41,31 @@
 
 ## 3. 생애주기를 갖는 객체 - 엔티티
 
+- 도메인 주도 개발에서 말하는 엔티티는 도메인 모델을 구현한 도메인 객체를 의미한다. 값 객체도 도메인 모델을 구현한 도메인 객체다. 이 두 가지 객체의 차이는 동일성을 통해 식별이 가능한지 아닌지에 있다.
+  - 엔티티는 속성이 아닌 동일성으로 식별되는 객체다.
+  - 사람이 나이를 먹는다고 이전과 다른 사람이 되지는 않는 것. 대표적으로 시스템의 사용자는 특정 속성 값이 아닌 동일성(identity)로 식별된다.
+
+엔티티의 성질은 다음과 같다.
+
+- 가변이다.
+- 속성이 같아도 구분할 수 있다.
+- 동일성을 통해 구별된다.
+
+**엔티티의 판단 기준 - 생애주기와 연속성**
+
+- 값 객체와 엔티티는 모두 도메인 개념을 나타내는 객체로서 서로 유사한 점이 많다. 그렇다면 어떤 것을 값 객체로 정의하고 어떤 것을 엔티티로 정의할 것인지 판단 기준이 필요할 것이다. 여기에는 생애주기의 존재 여부와 그 생애주기의 연속성 여부가 중요한 판단 기준이 된다.
+
+- 생애주기를 갖지 않거나 생애주기를 나타내는 것이 무의미한 개념이라면 우선 값 객체로서 다루는 것이 좋다. 생애주기를 갖는 객체는 태어나서 죽을 때까지 변화를 겪을 수 있다. 정확함이 필요한 소프트웨어를 만들려고 할 때 가변 객체는 신중히 다뤄야 할 성가신 존재다. 불변으로 남겨둘 수 있는 것은 최대한 불변 객체로 남겨둬야 시스템을 단순하게 유지할 수 있다.
+
+**값 객체도 되고 엔티티도 될 수 있는 모델**
+
+- 타이어를 예로 들면, 타이어는 자동차를 구성하는 한 부품이다. 특성에는 세세한 차이가 있어도 서로 바꿔 쓸 수 있으므로 값 객체로 나타내기에 적합한 개념이다. 그러나 타이어를 만드는 공장의 입장에서 타이어를 식별하는 것은 중요하다. 여기서의 타이어는 엔티티로 나타내는 것이 더 적합하다.
+
+**도메인 객체를 정의할 때의 장점**
+
+- 자기 서술적인 코드가 된다.
+- 도메인에 변경사항이 있을 시 코드에 반영하기 쉽다.
+
 ## 4. 부자연스러움을 해결하는 도메인 서비스
 
 ## 5. 데이터와 관계된 처리를 분리하자 - 리포지토리
