도메인 주도 설계 철저 입문 4wkd

--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -68,6 +68,9 @@
 
 ## 4. 부자연스러움을 해결하는 도메인 서비스
 
+- 소프트웨어 개발에서 말하는 서비스는 클라이언트를 위해 무언가를 해주는 객체를 말한다. 그러나 이 '무언가'의 범위가 매우 넓고 다양하기 때문에 도리어 혼란스럽다.
+  - 도메인 주도 설계에서 말하는 서비스는 크게 두 가지로 나뉘다. 첫 번째는 도메인을 위한 서비스고 두 번째는 애플리케이션을 위한 서비스다.
+
 ## 5. 데이터와 관계된 처리를 분리하자 - 리포지토리
 
 ## 6. 유스케이스를 구현하기 위한 '애플리케이션 서비스'
