--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -73,6 +73,10 @@
 
 ## 5. 데이터와 관계된 처리를 분리하자 - 리포지토리
 
+- 소프트웨어로 도메인 개념을 포현했다고 해서 그대로 애플리케이션이 되는 것은 아니다. 프로그램을 실행할 때 메모리에 로드된 데이터는 프로그램을 종료하면 그대로 사라져버린다. 특히 엔티티는 생애주기를 갖는 객체이기 때문에 프로그램의 종료와 함께 객체가 사라져서는 안 된다.
+- 객체를 다시 이용하려면 데이터스토어에 객체 데이터를 저장 및 복원할 수 있어야 한다. 리포지토리는 데이터를 저장하고 복원하는 처리를 추상화하는 객체이다.
+- 리포지토리의 책임은 도메인 객체를 저장하고 복원하는 퍼시스턴시다. 퍼시스턴시라고 하면 무조건 관계형 데이터베이스를 떠올리는 사람이 많지만, 퍼시스턴시의 기반 기술은 관계형 데이터베이스 외에도 다양하다.
+
 ## 6. 유스케이스를 구현하기 위한 '애플리케이션 서비스'
 
 ## 7. 소프트웨어의 유연성을 위한 의존 관계 제어
