도메인 주도 설계 철저 입문 6장

--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -79,6 +79,14 @@
 
 ## 6. 유스케이스를 구현하기 위한 '애플리케이션 서비스'
 
+- 애플리케이션은 일반적으로 이용자의 목적에 부응하는 프로그램을 의미한다. 애플리케이션의 목표는 이용자의 필요를 만족시키고 목적을 달성하게 하는 것이다.
+- 도메인 객체는 도메인을 코드로 옮긴 것이다. 도메인을 코드로 나타냈다고 해도 그것만으로는 이용자가 당연한 문제나 필요가 해결되지 않는다. 이용자의 필요를 만족시키거나 문제를 해결하려면 도메인 객체의 힘을 하나로 엮어 올바른 방향으로 이끌어야 한다.
+- 서비스는 클라이언트를 위해 무언가를 해주는 존재다. 값 객체와 엔티티는 자신을 위한 행동을 갖고 있지만, 서비스의 행동을 자신을 위한 것이 아니다. 따라서 서비스는 어떤 사물보다는 활동이나 행동인 경우가 많다.
+  - 서비스는 어떤 영역에도 존재할 수 있다. 도메인과 관련된 활동은 도메인 서비스가 되고, 애플리케이션이 되기 위한 서비스는 애플리케이션 서비스가 된다.
+  - 도메인 서비스 : 사용자명 중복 확인
+  - 애플리케이션 서비스 : 회원 가입, 회원 탈퇴
+- 서비스는 자신의 해옫ㅇ을 변화시키는 것을 목적으로 하는 상태를 갖지 않는다. 서비스가 상태를 갖지 않으면 현재 상태를 신경 쓸 필요가 없다는 장점이 있다. 하지만 서비스가 전혀 상태를 갖지 않는다는 것은 아니다.
+
 ## 7. 소프트웨어의 유연성을 위한 의존 관계 제어
 
 ## 8. 소프트웨어 시스템 구성하기
