도메인 주도 설계 철저 입문 7장.md

--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -89,6 +89,10 @@
 
 ## 7. 소프트웨어의 유연성을 위한 의존 관계 제어
 
+**IoC Container 패턴**
+
+- Dependency Injection 패턴의 활용
+
 ## 8. 소프트웨어 시스템 구성하기
 
 ## 9. 복잡한 객체 생성을 맡길 수 있는 팩토리 패턴
