--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -85,7 +85,7 @@
   - 서비스는 어떤 영역에도 존재할 수 있다. 도메인과 관련된 활동은 도메인 서비스가 되고, 애플리케이션이 되기 위한 서비스는 애플리케이션 서비스가 된다.
   - 도메인 서비스 : 사용자명 중복 확인
   - 애플리케이션 서비스 : 회원 가입, 회원 탈퇴
-- 서비스는 자신의 해옫ㅇ을 변화시키는 것을 목적으로 하는 상태를 갖지 않는다. 서비스가 상태를 갖지 않으면 현재 상태를 신경 쓸 필요가 없다는 장점이 있다. 하지만 서비스가 전혀 상태를 갖지 않는다는 것은 아니다.
+- 서비스는 자신의 행동을 변화시키는 것을 목적으로 하는 상태를 갖지 않는다. 서비스가 상태를 갖지 않으면 현재 상태를 신경 쓸 필요가 없다는 장점이 있다. 하지만 서비스가 전혀 상태를 갖지 않는다는 것은 아니다.
 
 ## 7. 소프트웨어의 유연성을 위한 의존 관계 제어
 
