도메인 주도 설계 철저 입문 9장

--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -99,6 +99,9 @@
 
 ## 9. 복잡한 객체 생성을 맡길 수 있는 팩토리 패턴
 
+- 복잡한 도구는 만드는 과정도 복잡하다. 그렇다면 도구를 만드는 과정도 일종의 지식이라고 할 수 있다. 프로그램에서도 이 점은 마찬가지여서 복잡한 객체는 객체를 생성한느 처리도 그만큼 복잡하다. 복잡한 객체를 생성하기 위한 복잡한 처리는 도메인 모델을 나타낸다는 객체의 취지를 불분명하게 만든다. 하지만 그렇다고 객체 생성을 무작정 클라이언트에만 맡기는 것도 좋은 방법이 아니다. 객체를 생성하는 과정 자체는 도메인에 큰 의미가 없을지 몰라도, 도멩니을 나타내기 위한 계층의 책임임에는 변함이 없기 때문이다.
+  - 여기서 바로 객체 생성 과정을 객체로 정의할 필요가 생긴다. 이렇게 객체 생성을 책임지는 객체를 마치 도구를 만드는 공장과도 같아고 해서 '팩토리'라고 부른다. 팩토린ㄴ 객체의 생성 과정과 관련된 지식이 정리된 객체다.
+
 ## 10. 데이터의 무결성 유지하기
 
 ## 11. 애플리케이션 밑바닥부터 만들기
