도메인 주도 설계 철저 입문 14장

--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -135,3 +135,28 @@
 
 ## 14. 아키텍처
 
+- 도메인 주도 설계가 아키텍터에게서 원하는 것은 도메인 객체가 서로 얽힌 레이얼르 분리해 소프트웨어 구현에 필요한 사정으로부터 도메인 객체를 지켜내는 것이다. 이것이 가능하다면 어떤 아키텍처를 사용해도 무방하다.
+
+- 다음은 도메인 주도 설계와 함께 자주 언급되는 아키텍처다.
+  - 계층형 아키텍처
+  - 헥사고날 아키텍처
+  - 클린 아키텍처
+
+**계층형 아키텍처**
+
+- 계층형 아키텍처는 도메인 주도 설계와 함께 언급되는 아키텍처 중에서 가장 전통적이면서도 유명한 아키텍처다. 계층형 아키텍처는 이름 그대로 여러 층이 쌓인 구조로 나타낼 수 있다.
+- 계층형 아키텍처를 구성하는 4개의 계층은 다음과 같다.
+  - 프레젠테이션 계층(사용자 인터페이스 계층) : 사용자 인터페이스와 애플리케이션이 연결되는 곳. 이 층의 주요 책임은 출력의 표시와 입력의 해석이다.
+  - 애플리케이션 계층 : 도메인 계층의 요소를 지휘하는 요소가 모인 계층. 애플리케이션 서비스는 도메인 객체의 직접적인 클라이언트가 되며 유스케이스를 구현하는 진행하 역할을 한다.ㅇ
+  - 도메인 계층 : 소프트웨어가 적용될 분야에서 문제 해결에 필요한 지식을 담는 계층
+  - 인프라스트럭쳐 계층 : 자신 외의 계층을 지탱한느 기술적 기반에 대한 접근을 제공한다.
+
+**hexagonal 아키텍처**
+
+- 애플리케이션과 그 외 인터페이스나 저장 매체를 자요롭게 탈착 가능하게 하는 것이다.
+- 게임기를 예로 들 수 있는데, 게임기는 게임 컨트롤러와 모니터 등 사용자와 직접 접하는 인터페이스를 갖는다. 게임 컨트롤러는 제조사에서 판매하는 제품도 있지만, 사용자의 취향에 따라 서드파티 제품을 연결해도 그대로 사용이 가능하다. 모니터를 봐도 게임기의 입장에서는 화면을 보여준다는 기능을 제공하는 것은 동일하고 사용자는 어떤 제조사의 모니터를 사용해도 관계없다.
+- 헥사고날 아키텍처는 이러한 개념ㅇㄹ 애플리케이션 구조에 도입한 것이다. 애플리케이션 외에 모듈은 다른 것으로 바꿔 끼울 수 있는 요소다. 이러한 준비가 되어있다면 인터페이스가 변경되는 상황이 생겨도 코어가 되는 애플리케이션에는 그 여파가 미치지 않는다.
+
+**클린 아키텍처**
+
+- 클린 아키텍처는 4개의 동심원이 있는 특징적인 그림으로 설명되는 아키텍처다.
