도메인 주도 설계 철저 입문 14장

--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -160,3 +160,11 @@
 **클린 아키텍처**
 
 - 클린 아키텍처는 4개의 동심원이 있는 특징적인 그림으로 설명되는 아키텍처다.
+
+![](Image\2022-01-28-12-20-52.png)
+
+- 요점은 비즈니스 규칙을 캡슐화한 모듈을 중심에 두는 컨셉이다. 그림의 Entity는 비즈니스 규칙을 캡슐화한 객체 혹은 데이터 구조와 함수를 묶은 것을 가리키는 것으로 굳이 따지면 우리가 배운 도메인 객체에 가까운 개념이다.
+- 클린 아키텍처는 사용자 인터페이스나 데이터스토어 같은 세부사항은 가장자리로 밀어내고, 의존관계의 방향을 안쪽을 향하게 함으로써 세부사항이 추상에 의존하는 의존관계 역전 원칙을 달성한다.
+- 클린 아키텍처에서 가장 중요한 것은 비즈니스 모듈을 캡슐화한 모듈을 중심에 두고 이존관계의 방향을 절대적으로 통제하는 데 있다. 이는 헥사고날 아키텍처의 콘셉트와도 일맥 상통하는 부분이다.
+
+- 어느 아키텍처를 사용하든지 도메인 주도 설계에서 가장 중요한 것은 도메인을 적절히 분리하는 것이다. 모든 세부사항이 도메인에 의존하게 하면 소프트웨어의 주도권을 중요도가 높은 도메인이 쥐게 할 수 있다.
