--- a/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
+++ b/Document/InfraAndSoftware/도메인 주도 설계 철저 입문.md
@@ -155,7 +155,7 @@
 
 - 애플리케이션과 그 외 인터페이스나 저장 매체를 자요롭게 탈착 가능하게 하는 것이다.
 - 게임기를 예로 들 수 있는데, 게임기는 게임 컨트롤러와 모니터 등 사용자와 직접 접하는 인터페이스를 갖는다. 게임 컨트롤러는 제조사에서 판매하는 제품도 있지만, 사용자의 취향에 따라 서드파티 제품을 연결해도 그대로 사용이 가능하다. 모니터를 봐도 게임기의 입장에서는 화면을 보여준다는 기능을 제공하는 것은 동일하고 사용자는 어떤 제조사의 모니터를 사용해도 관계없다.
-- 헥사고날 아키텍처는 이러한 개념ㅇㄹ 애플리케이션 구조에 도입한 것이다. 애플리케이션 외에 모듈은 다른 것으로 바꿔 끼울 수 있는 요소다. 이러한 준비가 되어있다면 인터페이스가 변경되는 상황이 생겨도 코어가 되는 애플리케이션에는 그 여파가 미치지 않는다.
+- 헥사고날 아키텍처는 이러한 개념을 애플리케이션 구조에 도입한 것이다. 애플리케이션 외에 모듈은 다른 것으로 바꿔 끼울 수 있는 요소다. 이러한 준비가 되어있다면 인터페이스가 변경되는 상황이 생겨도 코어가 되는 애플리케이션에는 그 여파가 미치지 않는다.
 
 **클린 아키텍처**
 
