소프트웨어 스펙의 모든 것 1장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -36,3 +36,49 @@
 - **설계** 소프트웨어 아키텍처를 설계하는 행위를 말한다. SDS 문서를 만들기도 하지만 산출물은 프로젝트에 따라 다르다.
 - **상위 설계** 기본 설계를 말한다. 전체 시스템 구조를 규명하고 상위 컴포넌트를 식별하며 인터페이스를 정의한다.
 - **하위 설계** 상세 설계를 말한다. 프로젝트마다 상세화 정도가 다르며 시스템을 점차 상세화해 추상화 수준을 낮춘다.
+
+## 1부 : 소프트웨어 스펙이란?
+
+### 소프트웨어 스펙의 개요
+
+프로젝트 실패의 판단 기준은 제각각 다르지만 다음의 경우 프로젝트가 실패했다고 할 수 있다.
+
+- 약속된 일정 내 제품 또는 서비스를 출시하지 못했다.
+- 소프트웨어가 요구하는 품질(기능 요구사항, 성능, 안정성, 사용성, 확장성 등)을 충족하지 못했다.
+- 프로젝트에 꼭 필요한 기술 개발에 실패했다.
+- 아키텍처가 뒤죽박죽이 되어서 유지보수가 어려워졌다.
+- 애초 예산보다 훨씬 더 많은 비용이 지출됐다.
+- 연이은 야근으로 조직 사기가 떨어지고 많은 사람이 그만뒀다.
+
+프로젝트가 실패하는 다양한 원인을 살펴보자.
+
+- 고객의 요구사항을 충분히 파악하지 못했다.
+- 초기에 제품의 방향을 빨리 정하지 못하고 우왕좌왕하며 보낸 시간이 많아서 정작 개발 시간이 부족했다.
+- 스펙과 설계를 꼼꼼하게 작성하지 않고 코딩을 시작해서 엉뚱한 방향으로 개발했다.
+- 작성된 스펙을 프로젝트 이해관계자들이 철저히 검토하지 않아서 잘못된 스펙으로 개발했다.
+- 진행할수록 새로운 요구사항이 계속 생겨서 프로젝트가 한없이 늘어졌다.
+- 변경된 요구사항을 일관되게 관리하지 못해서 프로젝트 팀원들이 서로 다른 기준으로 개발 했다.
+- 상명하달된 출시 일정에 맞추기 위해 급하게 코딩부터 시작했다. 나중에 잘못된 코드를 재작성하느라 시간이 더 많이 소비됐다.
+- 훈련이 덜 된 개발자들을 투입해서 초반에 갈팡질팡하느라 시간이 지체했다.
+- 느슨한 일정 관리로 프로젝트가 지연되고 있다는 징후를 알아차리지 못했다.
+- 리스크 관리를 하지 않아서 프로젝트에 큰 문제가 발생해 실패했다.
+- 프로젝트 막판에 경영진이나 주요 고객이 프로젝트 방향을 완전히 틀어서 처음부터 다시 개발해야 했다.
+- 지속적인 팀워크 불화로 프로젝트가 산으로 갔다.
+- 외부에서 도입한 필수 기술이 기대처럼 동작하지 않는다는 사실을 막바지에 알게 됐다.
+- 테스트팀에 스펙을 제대로 전달하지 못해서 테스트 준비를 충분히 하지 못했다.
+- 회사의 표준 프로세스를 강요해 문서를 많이 만들다 보니 정작 개발에는 소홀해졌다.
+
+실패 원인은 끝도 없이 많은데 이를 크게 나누면 스펙, 팀, 관리, 고객, 기술 등으로 분류할 수 있다. 글쓴이가 이중에서 가장 중요하게 생각하는 것은 '스펙'이다. 프로젝트의 가장 많은 실패 원인이 스펙과 관계되며 소프트웨어 버그의 절반 이상이 부실하거나 잘못 작성된 스펙 때문에 발생한다고 알려졌다.
+
+프로젝트 규모가 작을 경우, 스펙을 제대로 적지 않고 요구사항 몇 줄로 개발해도 무난히 완성하곤 한다. 경험이 많은 몇몇 개발자가 주도하는 경우, 요구사항을 대충 알려줘도 잘 알아듣고 개발을 잘하기도 한다. 하지만 수십 명의 개발자가 투입되는 대규모 프로젝트에서는 체계적으로 정리된 스펙 문서가 반드시 필요하다. 외국에 외주를 줄 경우, 상세하게 적힌 스펙 문서와 인수 테스트 계획은 필수다.
+
+요구사항이 누락되거나 어설프게 분석된 스펙도 문제지만 너무 상세하게 적거나 스펙 문서가 방대해지는 것도 문제다. 대규모 방법론을 따르는 회사에서는 종종 이런 함정에 빠진다. 소규모 프로젝트의 성공 경험을 대규모 프로젝트에 적용해서 실패하기도 하고, 반대로 중소규모 프로젝트에 대규모 방법론을 적용하는 것이 프로젝트 실패의 원인이 되기도 한다. 개발은 문서대로 진행되지 않을 뿐만 아니라, 문서가 너무 많아서 수시로 바뀌는 요구사항을 전부 문서에 반영하지도 못한다. 따라서 엄격한 프로세스로 규제하는 것도 어렵다. 자율에 맡겨도 쉽지 않다.
+
+글쓴이가 생각하는 최선의 방법은 '원칙만 지킬 수 있는 최소한의 프로세스 환경에서 좋은 문화를 공유'하는 것이다. 빨리빨리 문화를 지양하고 적절한 분석과 설계를 거쳐 프로젝트를 진행하는 것이 지름길이라는 인식을 공유해야 한다.
+
+**스펙에 대한 오해들**
+
+- 폭포수 모델과 달리 우리는 애자일이라 잘 적을 필요가 없다. : 스펙 작성은 폭포수 모델에서나 하는 것이라는 생각은 오해다. 스펙 작성이 어렵다는 소문을 듣고 애자일agile을 선택하는 회사도 있다. 이 또한 애자일을 적용하면 어렵게 스펙을 작성하지 않아도 된다는 잘못된 생각에서 비롯된 것이다. 실무에서 폭포수 모델을 사용하는 소프트웨어 회사는 거의 없다. 방법론과 상관없이 소프트웨어 스펙은 중요하다. 애자일이라 하더라도 스펙 내용은 바뀌지 않는다. 적는 방법이 달라질 뿐이다.
+
+**스펙의 역할**
+
