--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -82,3 +82,9 @@
 
 **스펙의 역할**
 
+**스펙을 제대로 작성하지 않으면**
+
+스펙을 작성할 때 요구사항을 바꾸면 '1'이라는 비용이 들지만, 고객에게 전달된 다음에 바꾸면 수백 배의 비용이 들어간다. 요구사항이든 설계든 한 단계 뒤에서 고칠 경우 2~5배의 비용이 들어가서 단계를 거치고 시간이 흐를수록 수정 비용은 기하급수적으로 증가한다. 따라서 개발의 사전 단계인 기획과 분석, 설계가 적절하게 잘돼야 한다. 만의 하나 한창 개발하는 중에 기획이나 요구사항이 바뀌면 치러야 할 대가가 막대하다는 사실을 명심해야 한다.
+
+![](AllAboutSwArchitecture_Image/2022-04-13-12-35-32.png)
+
