소프트웨어 스펙의 모든 것 2장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -88,3 +88,28 @@
 
 ![](AllAboutSwArchitecture_Image/2022-04-13-12-35-32.png)
 
+### SRS
+
+**SRS란 무엇인가**
+
+소프트웨어 요구사항을 분석하고 이를 정리해 작성하는 스펙 문서는 셀 수 없을 만큼 다양하다. 개발 방법론에 따라 제시하는 문서 종류가 다르고 그 개수도 천차만별이다. 그중에서 이 책에서 주로 다룰 문서는 SRS (Software Requirements Specification)다. SRS는 specification혹은 spec(스펙)이라고도 한다. IEEE830에 SRS 문서를 작성하는 가이드가 정의되어 있고 DoD(미국 국방부) 표준 문서다.
+
+**어떻게 소프트웨어를 빠르게 개발할 것인가**
+
+소프트웨어를 빠르게 개발하기 위해 고려해야 할 것은 많지만, 여기서는 스펙을 중심으로 살펴본다.
+
+![](AllAboutSwArchitecture_Image/2022-04-13-14-20-24.png)
+
+![](AllAboutSwArchitecture_Image/2022-04-13-14-22-24.png)
+
+이렇게 소프트웨어를 동시에 개발해 프로젝트 기간을 단축하려면 사전 단계인 분석, 설계가 정교하게 되어야 한다. 특히 컴포넌트를 잘 나누고 인터페이스를 견고하게 정의해야 한다. 인터페이스는 간결하게 정의해서 모듈 간의 연동을 쉽게 하고 확고하게 정해서 함부로 바꾸지 않도록 한다. 물론 한번 정의한 인터페이스가 프로젝트 종료 시까지 변경되지 않는다면 가장 바람직하겠지만, 쉽지 않다. 개발 도중에 인터페이스를 변경하면 처음에 잘 정의한 경우보다 수십 배의 비용이 더 들어간다. 따라서 분석, 설계 시 최대한 세심한 노력을 기울여 인터페이스가 변경되지 않도록 정의해야 한다.
+
+프로젝트 규모가 크고 참여 인원이 많을 수록 순차적 개발보다 병렬 개발이 더 효과적이다. 수십 명의 개발자가 참여하는 프로젝트라면 순차적 개발은 거의 불가능하다. 이들 개발자가 처음부터 잘 통합된 소스코드를 기반으로 병렬로 개발해야 프로젝트를 빨리 끝낼 수 있다.
+
+![](AllAboutSwArchitecture_Image/2022-04-13-14-25-36.png)
+
+인터페이스는 상호간의 약속이다. 클라이언트와 서버 모듈을 병렬 개발할 때 인터페이스는 클라이언트 개발팀과 서버 개발팀 간의 약속이다. 인터페이스를 확정하면 서로 약속한 것이니, 헤어져서 따로 개발해도 문제가 없을 정도로 신뢰도가 높아야 한다.
+
+프로젝트 기간 내내 인터페이스를 잘 유지하기 위해서는 지속적인 통합이 필요하며 이를 위해서는 유닛 테스트, 테스트 자동화가 유용하다. 개발자는 자신이 작성한 모듈을 완성한 후에 소스코드 관리 시스템에 등록하는 것이 아니라 좀 더 잦은 주기로 등록해서 프로젝트 주기 내내 소스코드가 정상적으로 빌드되도록 유지해야 한다. 너무 늦게 통합할 경우 많은 문제를 일으키는 '통합의 지옥'을 맛보게 된다.
+
+지속적인 통합을 위해 반드시 필요한 것은 주기적인 빌드다. 빌드 온 커밋build on commit을 하기도 하고 데일리 빌드daily build를 하기도 한다. 프로젝트 기간 내내 데일리 빌드는 실패가 없어야 한다. 데일리 빌드가 실패했다면 인터페이스가 깨졌거나 어떤 개발자가 깨진 소스코드를 올렸을 수 있다. 빌드가 깨지면 여러 개발자들이 개발에 차질을 빚게 된다. 
