--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -113,3 +113,26 @@
 프로젝트 기간 내내 인터페이스를 잘 유지하기 위해서는 지속적인 통합이 필요하며 이를 위해서는 유닛 테스트, 테스트 자동화가 유용하다. 개발자는 자신이 작성한 모듈을 완성한 후에 소스코드 관리 시스템에 등록하는 것이 아니라 좀 더 잦은 주기로 등록해서 프로젝트 주기 내내 소스코드가 정상적으로 빌드되도록 유지해야 한다. 너무 늦게 통합할 경우 많은 문제를 일으키는 '통합의 지옥'을 맛보게 된다.
 
 지속적인 통합을 위해 반드시 필요한 것은 주기적인 빌드다. 빌드 온 커밋build on commit을 하기도 하고 데일리 빌드daily build를 하기도 한다. 프로젝트 기간 내내 데일리 빌드는 실패가 없어야 한다. 데일리 빌드가 실패했다면 인터페이스가 깨졌거나 어떤 개발자가 깨진 소스코드를 올렸을 수 있다. 빌드가 깨지면 여러 개발자들이 개발에 차질을 빚게 된다. 
+
+**스펙 문서의 유형**
+
+- 이슈 관리시스템의 한 줄 또는 몇 줄의 설명
+- 엔지니어링 one-pager
+- 수십 페이지의 SRS
+- 수백, 수천 페이지의 거대 방법론 스펙 문서
+  - 거대 방법론에서는 문서를 수십 개 이상 작성하기도 한다. 이런 방법론에서는 스펙을 문서 하나로 정리하는 것이 아니라 여러 개 문서에 분산해 작성한다.
+
+**요구사항과 스펙의 차이**
+
+스펙에 대해 얘기할 때 종종 혼동하는 것이 요구사항이다. 영어로는 각각 specification과 requirement(s)다. 
+
+- '요구사항'이란 말은 소프트웨어 업계 안팎에서 일반적 의미, 즉 고객이나 이해관계자가 요구하는 것으로 통용된다. 하지만 소프트웨어 '스펙'은 쓰는 사람에 따라 의미가 조금씩 다르다. 그래서 수많은 회사에서 또 여러 개발자들이 생각하는 의미에 미묘한 차이가 있을 수밖에 없다.
+- 하지만 소프트웨어 '스펙'이라고 하면 머릿속에 그려지는 모습이 있다. 그리고 그 모습은 전 세계 개발자들이 공통으로 생각하는 것이다. 적어도 이런 내용이 포함됐고 이런 절차를 통해 만들었으리라는 생각이 자동으로 떠오르는 것이다.
+- 그래서 요구사항은 한 줄이나 몇 줄에 불과하지만 그 요구사항을 잘 분석해서 스펙을 작성하면 몇 페이지 또는 수십, 수백 페이지 문서가 될 수도 있다. 그러니 스펙을 제대로 작성하지 않고 요구사항만 가지고 프로젝트를 시작하면 큰 재앙이 닥칠 수 있다. 특히 외주 프로젝트라면 그 재앙은 회사의 존속을 위태롭게 한다.
+
+**스펙인 것과 스펙이 아닌 것**
+
+![](AllAboutSwArchitecture_Image/2022-04-13-14-54-16.png)
+
+![](AllAboutSwArchitecture_Image/2022-04-13-14-54-38.png)
+
