소프트웨어 스펙의 모든 것

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -136,3 +136,30 @@
 
 ![](AllAboutSwArchitecture_Image/2022-04-13-14-54-38.png)
 
+**스펙과 프로젝트 일정의 관계**
+
+![](AllAboutSwArchitecture_Image/2022-04-14-15-04-43.png)
+
+![](AllAboutSwArchitecture_Image/2022-04-14-15-05-47.png)
+
+![](AllAboutSwArchitecture_Image/2022-04-14-15-11-15.png)
+
+위 그림을 보면 초기에는 50 ~ 200% 범위로 부정확한 일정을 얘기할 수밖에 없고 이를 듣는 사람도 부정확한 일정이라는 것을 염두에 둬야 한다. 그렇지 않으면 초기에 제시한 부정확한 일정에 발목이 잡혀 무리하게 프로젝트를 진행하다가 일을 망치고 사기도 저하된다. 그 후에는 일정 제시에 소극적이고 방어적이게 되어 유기적 협업 체제가 깨지고 만다.
+
+![](AllAboutSwArchitecture_Image/2022-04-14-16-30-54.png)
+
+![](AllAboutSwArchitecture_Image/2022-04-14-16-40-12.png)
+
+다음 그림은 상향식으로 WBS를 통해 일정을 예측하고 프로젝트 기간 내내 일정 변동을 나타낸 그래프다. X 축은 날짜, Y축은 MD Man X Day(개발자의 하루치 일)이다.
+
+![](AllAboutSwArchitecture_Image/2022-04-14-16-47-28.png)
+
+![](AllAboutSwArchitecture_Image/2022-04-14-16-53-04.png)
+
+리스크를 고려하지 않고 낙관적으로 예측한 일정으로 프로젝트를 진행하면 일정을 지키기가 어렵다. 리스크를 고려한 좀 더 정확한 프로젝트 일정을 예측하기 위해서는 꾸준히 리스크를 재평가하고 철저히 관리해야 한다. 리스크는 프로젝트 진행에 따라 계속 바뀌며 발생 확률도 변한다. 이런 요소들을 지속적으로 검토하고 일정에 반영해야 정확한 일정을 수시로 업데이트하고, 문제를 조기 발견해 대처하며 결국 프로젝트 일정을 준수할 확률이 높아진다.
+
+**스펙과 설계의 구분**
+
+스펙은 무엇을 만드느냐. 즉 'What'에 대한 것이고, 설계는 어떻게 만드느냐, 즉 'How'에 대한 것이라고 한다. 얼핏 들으면 반은 맞는 말이지만, 실효가 없는 말이다. 스펙과 설계의 경계는 생각보다 뚜렷하지 않다.
+
+![](AllAboutSwArchitecture_Image/2022-04-14-17-33-55.png)
