소프트웨어 스펙의 모든 것

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -163,3 +163,13 @@
 스펙은 무엇을 만드느냐. 즉 'What'에 대한 것이고, 설계는 어떻게 만드느냐, 즉 'How'에 대한 것이라고 한다. 얼핏 들으면 반은 맞는 말이지만, 실효가 없는 말이다. 스펙과 설계의 경계는 생각보다 뚜렷하지 않다.
 
 ![](AllAboutSwArchitecture_Image/2022-04-14-17-33-55.png)
+
+### 스펙 작성의 현주소, 현실과 관행
+
+**소프트웨어 공학, 약인가? 독인가?**
+
+소프트웨어 공학은 소프트웨어를 최소의 비용으로 최단 기간에 개발하는 방법을 모아놓은 것이다.
+
+![](AllAboutSwArchitecture_Image/2022-04-14-19-10-18.png)
+
+![](AllAboutSwArchitecture_Image/2022-04-14-19-10-36.png)
