소프트웨어 스펙의 모든 것 5장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -176,3 +176,22 @@
 
 ### 5장 : 기업 문화
 
+**사수/부사수 시스템 탈피 방법**
+
+우리나라 회사에서 신참을 교육하는 가장 흔한 방법은 '사수/부사수 시스템'이다. '사수'란 본래 군에서 쓰는 말이다. M60 기관총 따위의 중화기는 보통 두 명 이상이 작동해야 해서 사수와 부사수가 같이 장비를 다룬다. 영화 속 람보는 M60 기관총을 혼자서 양손에 하나씩 들고 쐈지만, 보통은 두 명이 협조해 사격하는 무기다. 이런 사수/부사수 시스템에서 사수는 주 업무를 맡고 부사수가 업무를 보조하며 익힌다. 1, 2년 후에는 부사수가 사수가 되어 또다시 부사수를 교육한다.
+
+소프트웨어 회사에서 사수/부사수 시스템은 장점에 비해 단점이 많아서 여러 문제를 일으킨다.
+
+- 사수, 즉 고참이 신참 교육에 너무 많은 시간을 소비한다. 신참 교육은 회사 입장에서 투자이기도 하지만 큰 비용이다. 따라서 고참이 오랜 기간 지속적으로 빼앗기는 시간만큼 회사는 비용을 치르게 된다.
+- 오랜 교육으로 부사수의 현장 투입이 늦어진다. 회사마다 개인마다 다르지만 부사수의 현장 투입에는 짧게는 몇 주부터 길게는 몇 달이 걸린다. 부사수는 교육과 훈련을 일정량 받기 전까지는 한 사람 몫의 30 ~ 50%를 감당할 뿐이다. 게다가 사수가 일하는 시간을 많이 빼앗아 근로 인력이 오히려 마이너스가 되기도 한다. 즉, 부사수가 없을 때보다 개발 기간이 더 지연되기도 한다.
+- 신참이 들어올 때마다 매번 반복해서 가르쳐야 한다. 부사수가 다시 사수가 되어 신참을 가르치려면 상당한 시간이 걸리기 때문에 여전히 고참이 교육을 맡아야 한다. 설상가상으로 시간차를 두고 5명의 개발자가 입사하면 교육 시간이 5배 들어간다.
+- 사수도 많은 정보를 잊어버려 제대로 교육하기가 쉽지 않다. 사수는 핵심 개발과 교육을 병행하느라 바빠서 개발 문서를 작성할 시간도 없다. 그래서 악순환이 반복된다. 아무리 신참을 가르쳐도 결국 문제 해결 요청이 몰려서 고참은 여전히 바쁘다.
+- 부사수는 사수의 시간을 빼앗는 것이 미안해서 자주 묻지 않게 된다. 뻔뻔한 부사수라도 사수가 눈코 뜰 새 없이 바쁘게 일하는 모습을 매일같이 보면 사수에게 묻지 않고 혼자 알아서 해보려 한다. 그러다 일을 그르쳐 문제를 키우고 나중에는 사수의 시간을 더 많이 빼앗게 된다.
+- 경영자는 그동안 문서가 없었던 탓이라 생각하고 기존 소프트웨어의 문서를 뒤늦게 만들라고 지시한다. 그런데 이미 개발이 완료된 시스템의 문서를 나중에 만드는 것은 헛수고다. 개발 후 만드는 문서에 필요한 정보의 10%나 제대로 적을 수 있을지 의문이다. 또한 제대로 분석, 설계를 거치지 않고 이미 만들어진 소프트웨어는 시간이 아무리 많아도 문서로 정리하기 어려운 구조로 되어 있는 경우가 많다. 그래서 악순환이 계속되고 사수/부사수 시스템에서 영영 벗어나지 못하게 된다.
+
+
+사수/부사수 시스템을 운용하는 회사에서 신참에게 정보를 전달하는 방식이 아래에 기준으로 2:8, 1:9 가 되는데 이는 굉장히 위험하다.
+
+> 문서/시스템 : 직접 교육 / 코칭
+
+즉, 문서나 시스템을 통해서는 10 ~ 20 % 정도의 정보밖에 전달하지 못하고 나머지는 사수가 직접 가르쳐야 한다. 이상적인 비율은 반대가 되어야 한다. 즉, 8:2가 바람직하다. 대부분의 정보는 문서나 시스템을 통해 얻어야 하고, 문서를 봐도 잘 모르는 정보는 멘토나 고참에게 물어보는 것이 좋다. 이것을 10:0 또는 9:1로 만드는 것은 거의 불가능하고 오히려 더 비효율적이다. 8:2 정도만 되면 앞에서 언급한 문제점이 거의 해결된다. 고참 개발자의 시간을 과하게 빼앗지 않게 되고, 신참이 아무리 못해도 마이너스 인력이 되지는 않는다. 스스로 공부할 수 있으니 노력 여하에 따라 얼마든 빨리 배울 수 있다. 또한 입사 후 실전 개발에 투입되는 시기도 훨씬 앞당긴다.
