소프트웨어 스펙의 모든 것 6장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -195,3 +195,27 @@
 > 문서/시스템 : 직접 교육 / 코칭
 
 즉, 문서나 시스템을 통해서는 10 ~ 20 % 정도의 정보밖에 전달하지 못하고 나머지는 사수가 직접 가르쳐야 한다. 이상적인 비율은 반대가 되어야 한다. 즉, 8:2가 바람직하다. 대부분의 정보는 문서나 시스템을 통해 얻어야 하고, 문서를 봐도 잘 모르는 정보는 멘토나 고참에게 물어보는 것이 좋다. 이것을 10:0 또는 9:1로 만드는 것은 거의 불가능하고 오히려 더 비효율적이다. 8:2 정도만 되면 앞에서 언급한 문제점이 거의 해결된다. 고참 개발자의 시간을 과하게 빼앗지 않게 되고, 신참이 아무리 못해도 마이너스 인력이 되지는 않는다. 스스로 공부할 수 있으니 노력 여하에 따라 얼마든 빨리 배울 수 있다. 또한 입사 후 실전 개발에 투입되는 시기도 훨씬 앞당긴다.
+
+### 6장 : 프로세스
+
+**스펙은 얼마나 자세히 적어야 하는가**
+
+스펙을 완벽하게 적는 것은 불가능하다. 그럼 스펙은 언제 끝내야 할까? 사용자가 요구사항을 더 생각해내지 못하거나 이전 리뷰 시간에 했던 얘기를 반복하면 끝낼 때가 된 것이다. 또 프로젝트 목표나 범위에서 벗어난 새로운 기능을 요구하거나 우선순위가 낮은 기능을 자꾸 제안할 때도 SRS 작성을 종료할 때가 된 것이다. 그때부터 제안하는 기능은 가능하면 다음 버전으로 연기하고 SRS를 마무리하는 것이 좋다.
+
+![](AllAboutSwArchitecture_Image/2022-04-18-19-56-09.png)
+
+- 물론 프로젝트 성격에 따라 상세히 작성해야 하기도 하고 대강 작성해야 하는 것이 더 효율적일 때가 있다.
+
+![](AllAboutSwArchitecture_Image/2022-04-18-19-56-49.png)
+![](AllAboutSwArchitecture_Image/2022-04-18-19-57-13.png)
+
+
+**스펙 리뷰**
+
+스펙은 리뷰로 완성된다. 스펙을 작성하는 도중에도 여러 이해관계자와 논의하고 스펙의 일부 내용을 검토하지만 무엇보다 최종본에 대한 리뷰는 스펙의 완성도에 있어서 필수다. 최종본에서는 중간에서 검토한 내용이 바뀌어 있을 수 있다. 최종본에 대한 모든 이해관계자의 최종 리뷰가 끝나야만 스펙은 확정 가능하다.
+
+웬만한 프로젝트 스펙 문서는 수백 페이지에 이른다. 그래서 철저히 리뷰하는 것이 쉽지는 않다. 그렇다고 리뷰를 대충 진행하면 안 된다. 그럼 스펙 리뷰는 어떻게 해야 할까?
+
+- 누구와 해야 하는가 : 리뷰는 프로젝트 이해관계자 모두와 한다. 경영자 또는 고객도 리뷰를 해야 하는 경우가 있다.
+- 몇 번이 적당한가 : 점진적으로 개발하는 프로젝트는 예외지만 리뷰는 한 번 하는 것이 원칙이다. 분석 아키텍트는 완벽하다고 생각하는 스펙 문서를 작성해서 한 번의 리뷰를 통해 최종본으로 확정하는 것이 가장 좋다. 스펙을 대충 작성해 리뷰하고 다시 추가로 작성해 리뷰를 반복하면 많은 시간이 소모될 뿐만 아니라 리뷰를 거듭할수록 집중도가 떨어진다. 수백 페이지나 되는 스펙 문서를 완벽하게 집중해 리뷰하려면 딱 한 번의 기회뿐임을 명심하는 것이 좋다.
+- 리뷰를 원활하게 하는 방법은 무엇인가 : 요구사항에 대해 개인의 관점이나 선호를 주장하는 사람들이 종종 있다. 이러한 사람이 자기 주장을 완강하게 고집하면 리뷰가 원활하게 진행되지 않는다. 리뷰하는 사람은 개인적인 선호가 아니라 전문가적 입장에서 요구사항에 오류가 없는지, 누락된 것이 없는지 찾아야 한다.
