소프트웨어 스펙의 모든 것 6장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -219,3 +219,29 @@
 - 누구와 해야 하는가 : 리뷰는 프로젝트 이해관계자 모두와 한다. 경영자 또는 고객도 리뷰를 해야 하는 경우가 있다.
 - 몇 번이 적당한가 : 점진적으로 개발하는 프로젝트는 예외지만 리뷰는 한 번 하는 것이 원칙이다. 분석 아키텍트는 완벽하다고 생각하는 스펙 문서를 작성해서 한 번의 리뷰를 통해 최종본으로 확정하는 것이 가장 좋다. 스펙을 대충 작성해 리뷰하고 다시 추가로 작성해 리뷰를 반복하면 많은 시간이 소모될 뿐만 아니라 리뷰를 거듭할수록 집중도가 떨어진다. 수백 페이지나 되는 스펙 문서를 완벽하게 집중해 리뷰하려면 딱 한 번의 기회뿐임을 명심하는 것이 좋다.
 - 리뷰를 원활하게 하는 방법은 무엇인가 : 요구사항에 대해 개인의 관점이나 선호를 주장하는 사람들이 종종 있다. 이러한 사람이 자기 주장을 완강하게 고집하면 리뷰가 원활하게 진행되지 않는다. 리뷰하는 사람은 개인적인 선호가 아니라 전문가적 입장에서 요구사항에 오류가 없는지, 누락된 것이 없는지 찾아야 한다.
+
+**코드 리뷰보다는 설계 리뷰, 설계 리뷰보다는 스펙 리뷰**
+
+소프트웨어를 제대로 개발하려는 회사들이 선택하는 방법 중 하나가 코드 리뷰다. 코드 리뷰를 진행하면 소프트웨어의 버그도 줄고 개발 문화도 향상되리라 믿기 때문이다. 하지만 코드 리뷰가 정착됐다는 얘기는 들어본 적이 별로 없다. 코드 리뷰가 중요한 것은 맞다. 코드 리뷰를 통해 문제점을 발견하고 더 효츌적인 방법을 찾기도 한다. 또 서로의 코드를 보면서 서로 배우는 것도 많다.
+
+하지만 이런 모든 얘기는 스펙, 설계가 잘 됐을 경우로 국한된다. 스펙도 설계도 없이 주먹구구식으로 개발하다가 문제가 있다고 코드 리뷰를 도입하면 오히려 방해가 되고 프로젝트만 지연된다. 코드를 리뷰하는 사람도 달랑 코드만 보면 별로 할 것이 없다. 회사의 코딩 규칙을 준수했는지 점검하고 몇 마디 조언과 설명을 해주는 것이 전부다. 로직이 제대로 동작하는지, 잠재된 문제가 없는지, 구조적으로 좋은지 등은 보기가 어렵다. 단지 코드 리뷰를 했다는 뿌듯함만 남을 뿐이다.
+
+스펙과 설계를 제대로 진행하는 것이 먼저다. 이것이 선행되지 않았다면 코드 리뷰는 안 하는 것이 낫다. 스펙을 제대로 작성해 리뷰하고 설계를 잘 의논해 리뷰하는 것이 훨씬 더 유용하고 프로젝트가 더 빨리 끝나는 가장 좋은 방법이다. 스펙과 설계가 잘 됐다면 코드 리뷰 때 볼 것이 많다. 그리고 상당히 잘 정리된 코드가 작성됐을 것이다. 좋은 설계를 보고 작서하는 코드는 뒤죽박죽되기 어렵기 때문이다. 다시 강조하지만 코드 리뷰보다는 설계 리뷰, 설계 리뷰보다는 스펙 리뷰가 더 중요하다.
+
+**스펙 변경 프로세스**
+
+스펙은 아무리 완벽하게 작성해도 개발 중에 변경된다. 또한 대부분의 프로젝트는 요구사항이 늘면 늘었지 줄지는 않는다. 변경 관리를 하는 목적은 스펙을 변경하지 않기 위해서가 아니다. 스펙 변경을 제대로 관리하려면 변경의 기준점을 정해야 한다.
+
+스펙 변경을 관리하고 통제하는 목적 중 하나는 마음 약한 프로젝트 관리자나 개발자가 개발 도중 누군가가 요구한 새로운 기능 추가, 기능 개선을 받아 들여 프로젝트를 수렁에 빠뜨리게 되는 사태를 방지하는 것이다. 티끌 모아 태산인데, 프로젝트 관점으로 전체를 보지 못하는 관리자나 개발자는 프로젝트가 망가지는 것도 모르고 야금야금 기능을 추가하곤 한다.
+
+소프트웨어가 모습을 드러내기 시작하면 사용자나 프로젝트 이해관계자들은 그때서야 변경 요구를 하기 시작한다. 애초에 자신이 원하던 기능과 구현된 기능이 다를 수 있고, 제품의 실물을 보면서 더 좋은 생각이 떠올랐을 수도 있다. 또는 경쟁사가 신제품을 출시해 그에 대응해야 할 수도 있다. 그러나 무조건 변경을 수용한다고 해서 더 경쟁력 있는 소프트웨어를 개발하는 것도 아니다. 무절제한 요구사항 변경은 프로젝트 일정을 지연시키고 프로젝트 성공 확률을 낮춘다.
+
+따라서 요구사항 변경은 통제하에 이루어져야 한다. CEO가 요구사항 변경을 요청해도 지켜야 하는 강력한 통제가 필요하다. 그리고 요구사항 변경 통제 프로세스를 사용하려면 변경관리위원회Change Control Board(CCB)가 존재해야 한다. 이 위원회는 프로젝트 초기부터 결성되어 프로젝트 전반의 변경 요구에 관여해야 한다.
+
+**종결된 프로젝트의 스펙 일부 삭제**
+
+방대한 문서는 개발 과정에서 소소한 논의를 거쳐 변경됐고, 컴포넌트와 인터페이스 특히 내부 인터페이스는 수정됐을 공산이 매우 크다. 이때 앞에서 얘기한 것과 같이 문서를 일방적으로 수정해 제품과 일치시키는 것이 최선의 방법은 아니다. 소프트웨어 개발 과정에서 생기는 변경은 스펙에 반영해서 프로젝트 팀원 간의 혼동을 방지해야 한다. 하지만 이미 개발 완료한 경우라면 얘기가 달라진다.
+
+완성된 소프트웨어라면 스펙 문서의 내용을 상당 부분 삭제해도 된다. 오히려 내용 일부를 잘 삭제하면 추후 유지보수나 업그레이드가 더 쉬워진다. 스펙 문서는 최종적으로 소프트웨어가 어떤 모습인지 정의하기도 하지만 소프트웨어를 어떻게 개발해야 하는지 안내하기도 한다. 그래서 소프트웨어를 완성한 후에는 더 이상 존재 가치가 없게 된다. 미래에 참조해야 할 가치가 별로 없는 내용은 과감히 삭제하는 것이 좋다.
+
+![](AllAboutSwArchitecture_Image/2022-04-19-19-49-43.png)
