소프트웨어 스펙의 모든 것 7장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -245,3 +245,10 @@
 완성된 소프트웨어라면 스펙 문서의 내용을 상당 부분 삭제해도 된다. 오히려 내용 일부를 잘 삭제하면 추후 유지보수나 업그레이드가 더 쉬워진다. 스펙 문서는 최종적으로 소프트웨어가 어떤 모습인지 정의하기도 하지만 소프트웨어를 어떻게 개발해야 하는지 안내하기도 한다. 그래서 소프트웨어를 완성한 후에는 더 이상 존재 가치가 없게 된다. 미래에 참조해야 할 가치가 별로 없는 내용은 과감히 삭제하는 것이 좋다.
 
 ![](AllAboutSwArchitecture_Image/2022-04-19-19-49-43.png)
+
+### 7장 : Who?
+
+**문제해결 능력**
+
+![](AllAboutSwArchitecture_Image/2022-04-19-20-01-54.png)
+![](AllAboutSwArchitecture_Image/2022-04-19-20-02-36.png)
