소프트웨어 스펙의 모든 것 8장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -252,3 +252,18 @@
 
 ![](AllAboutSwArchitecture_Image/2022-04-19-20-01-54.png)
 ![](AllAboutSwArchitecture_Image/2022-04-19-20-02-36.png)
+
+
+### 8장 : What?
+
+흔히들 스펙 문서는 What, 즉 무엇을 만들어야 하는지를 적는 것이라고 한다. 이 말은 맞는 말이면서 틀린 말이다. 스펙 문서의 최종 목표는 what을 적는 것이지만 what만 적어서는 what을 온전히 정의할 수 없기 때문이다. 스펙을 작성하면서 흔히 하는 실수는 기능 요구사항만 상세하게 적는 것이다. 설령 그것이 다 맞는 내용이라 하더라도 기능만 잔뜩 적힌 스펙 문서를 보고서는 기획자가 의도한 소프트웨어를 설계하고 만들어내지 못한다.
+
+그래서 기획 문서는 why, 스펙 문서는 what, 설계 문서는 how를 적는 것이라는 말은 적절하지 않다. 세 문서 모두에 why, what, how를 적되 차지하는 분량의 비율이 다르다. 이유는 여러 가지지만 문서의 독자가 각각 다르다는 것도 큰 이유 중 하나다.
+
+![](AllAboutSwArchitecture_Image/2022-04-20-17-07-35.png)
+
+스펙을 작성하면 설계는 자연스럽게 따라온다. 설계 내용의 일부분 또는 상당 부분은 스펙 문서에 포함되기도 하고 별도의 문서에 작성되기도 한다. 스펙에 무엇을 만드는지에 대해, 즉 what만 적는다면 좋은 설계, 좋은 아키텍처를 만들 수 없다. 따라서 스펙에는 상당히 많은 'why'가 적힌다. why에 해당하는 내용을 따라 해서는 스펙이 목적을 달성하기 힘들다. 즉, 좋은 아키텍처를 설계하지 못하거나 프로젝트 도중 문제에 봉착하거나 출시 후 문제가 발생할 확률이 높다.
+
+![](AllAboutSwArchitecture_Image/2022-04-20-17-16-01.png)
+
+![](AllAboutSwArchitecture_Image/2022-04-20-17-16-25.png)
