소프트웨어 스펙의 모든 것 8장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -267,3 +267,21 @@
 ![](AllAboutSwArchitecture_Image/2022-04-20-17-16-01.png)
 
 ![](AllAboutSwArchitecture_Image/2022-04-20-17-16-25.png)
+
+**목표와 범위 정의하기**
+
+**요구사항에 우선순위 부여하기**
+
+**외주 시 외주 업체에 전달할 문서는?**
+
+**스펙 체크리스트의 효용성**
+
+체크리스트는 산업 분야 여러 곳에서 활용도가 높다. 하지만 뜻밖에도 소프트웨어 스펙을 점검하는 데는 무용지물이다. 우선 체크리스트를 만드는 것 자체가 불가능하고 설령 체크리스트를 만들었다 하더라도 엉터리일 것이다. 체크리스트를 가지고 스펙을 점검하기 시작하면 무언가 도움되는 것이 있더라도 스펙이 범위를 체크리스트 항목으로 제한하게 되어 득보다 실이 훨씬 더 크다.
+
+예를 들어보자. 피아노 연주 체크리스트 300개, 골프 스윙 체크리스트 200개, 이런 식으로 체크리스트를 만드는 것은 무의미하다. 체크리스트로 점검한다고 해서 피아노를 잘 치는지 확인하고 실력이 좋아지는 것이 아니기 때문이다. 프로 골퍼는 아마추어 골퍼가 스윙하는 모습을 몇 초만 지켜보면 문제를 바로 안다. 하지만 아마추어는 체크리스트를 아무리 뚫어져라 쳐다봐도 문제를 포착하지 못한다. 스펙 역시 고려할 것이 너무 많아서 빠짐없이 나열하는 것이 불가능하다.
+
+게다가 프로젝트마다 성격이 달라서 점검해야 할 것이 다르다. 소프트웨어 스펙을 작성하는 일은 피아노, 골프와 같이 오랜 경험과 훈련으로 축적된 것이 자연적으로 발현되는 것이다. 단순히 프로젝트를 오래했다고 저절로 생기는 것이 아니다. 분석과 설계를 제대로 하면서 프로젝트를 수십 차례 해보면 착실하게 단련한 운동 선수처럼 요구사항이 빠르게 결합되고 분석되면서 머릿속으로 설계를 거쳐 코딩까지 생각하기에 이른다. 그렇지 않은 경우 아키텍트는 더 깊이 고민하고 실마리를 찾기 위해 조사를 하거나 다른 사람에게 도움을 구한다. 또는 직접 프로토타입을 만들어보기도 한다. 이런 과정을 거쳐 프로젝트를 반복해 진행하다 보면 스펙을 작성할 때 무엇을 고려해야 할지 저절로 익히게 된다.
+
+그래서 소프트웨어 스펙을 작성할 때는 체크리스트가 아니라 원칙을 강조한 가이드라인이 길잡이가 된다. 가이드라인은 조목조목 구체적이지는 않지만 원리를 이해하기 좋게 작성됐다. 장기적 관점에서는 체크리스트보다는 추상적이지만 가이드라인을 보면서 그 원리를 깨우치기 위해 노력하는 것이 현명하다.
+
+### 9장 : How?
