소프트웨어 스펙의 모든 것  9장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -285,3 +285,24 @@
 그래서 소프트웨어 스펙을 작성할 때는 체크리스트가 아니라 원칙을 강조한 가이드라인이 길잡이가 된다. 가이드라인은 조목조목 구체적이지는 않지만 원리를 이해하기 좋게 작성됐다. 장기적 관점에서는 체크리스트보다는 추상적이지만 가이드라인을 보면서 그 원리를 깨우치기 위해 노력하는 것이 현명하다.
 
 ### 9장 : How?
+
+**스펙의 재료**
+
+**스펙 가독성 높이기**
+
+**문장 바르게 쓰기**
+
+- 스펙의 기본 문장 형태 : '이 소프트웨어는 OOO를 해야 한다'가 스펙 문장이 기본형이다. 영어로는 shall, must, have to, should, would 등 여러 가지 표현이 있지만 한국어로는 '해야 한다'가 가장 적당한 표현이다. 문장을 강조해서 요구사항의 중요도를 나타낼 수도 있지만 별도로 우선순위를 표시해서 중요도를 명확하게 나타내는 것이 좋다.
+- 수동태보다는 능동태
+  - ![](AllAboutSwArchitecture_Image/2022-04-20-17-44-28.png)
+- 이유도 적기
+  - ![](AllAboutSwArchitecture_Image/2022-04-20-17-48-59.png)
+- 서술식으로 적는 것이 좋다.
+  - ![](AllAboutSwArchitecture_Image/2022-04-20-17-50-14.png)
+- 주어를 생략하지 않는다.
+  - ![](AllAboutSwArchitecture_Image/2022-04-20-17-50-40.png)
+- 정량적으로 적는다.
+  - ![](AllAboutSwArchitecture_Image/2022-04-20-17-51-23.png)
+- 애매한 표현은 삼간다.
+  - ![](AllAboutSwArchitecture_Image/2022-04-20-17-51-44.png)
+- 문장 표현의 한계 : 문장만 너무 많이 작성하면 장황하고 길어져서 읽기가 힘들어진다. 그림, 다이어그램, 그래프 등을 적절하게 활용하면 좋다. 표현법을 표준화하는 것은 상호 의미를 효과적으로 전달하는 데 도움이 된다. 그렇다고 꼭 UML을 써야 하는 것은 아니다. UML을 써서 효과를 보기도 하지만 오히려 부담이 되는 경우도 많다.
