소프트웨어 스펙의 모든 것 9장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -306,3 +306,10 @@
 - 애매한 표현은 삼간다.
   - ![](AllAboutSwArchitecture_Image/2022-04-20-17-51-44.png)
 - 문장 표현의 한계 : 문장만 너무 많이 작성하면 장황하고 길어져서 읽기가 힘들어진다. 그림, 다이어그램, 그래프 등을 적절하게 활용하면 좋다. 표현법을 표준화하는 것은 상호 의미를 효과적으로 전달하는 데 도움이 된다. 그렇다고 꼭 UML을 써야 하는 것은 아니다. UML을 써서 효과를 보기도 하지만 오히려 부담이 되는 경우도 많다.
+
+**스펙 작성 팁**
+
+- TBD : to-be-determined 추후 결정하거나 작성하겠다는 의미다.
+- N/A와 none : N/A는 not applicable. '해당 사항이 없다'는 뜻이다. None은 '해당 사항은 있지만 하지 않는다'는 뜻이다.
+- 비목표사항will not do의 작성 : 흔히 SRS에는 해야 할 일만 적는다. 하지만 하지 말아야 할 일도 적어야 한다. 이는 해야 할 일 못지 않게 중요한 정보다. 하지 말아야 할 일을 적어놓지 않으면 추후에 사람들이 자꾸 그 이슈를 의논하게 될 테고, 나중에는 과거의 이슈도 모르고 해야 할 일로 탈바꿈할 수 있다. 비목표사항을 적을 때 이슈가 있는 항목의 경우 왜 지원하지 않아도 되는지, 왜 지원하지 않기로 결정했는지에 대한 설명도 곁들이면 금상첨화다. 때에 따라서는 비목표사항이 목표사항보다 더 중요하므로 신경 써서 작성해야 한다.
+  - ![](AllAboutSwArchitecture_Image/2022-04-25-14-25-04.png)
