--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -313,3 +313,29 @@
 - N/A와 none : N/A는 not applicable. '해당 사항이 없다'는 뜻이다. None은 '해당 사항은 있지만 하지 않는다'는 뜻이다.
 - 비목표사항will not do의 작성 : 흔히 SRS에는 해야 할 일만 적는다. 하지만 하지 말아야 할 일도 적어야 한다. 이는 해야 할 일 못지 않게 중요한 정보다. 하지 말아야 할 일을 적어놓지 않으면 추후에 사람들이 자꾸 그 이슈를 의논하게 될 테고, 나중에는 과거의 이슈도 모르고 해야 할 일로 탈바꿈할 수 있다. 비목표사항을 적을 때 이슈가 있는 항목의 경우 왜 지원하지 않아도 되는지, 왜 지원하지 않기로 결정했는지에 대한 설명도 곁들이면 금상첨화다. 때에 따라서는 비목표사항이 목표사항보다 더 중요하므로 신경 써서 작성해야 한다.
   - ![](AllAboutSwArchitecture_Image/2022-04-25-14-25-04.png)
+- 논의 과정도 기록 : 하나의 이슈를 가지고 한 시간 동안 치열한 논쟁을 하고 결론에 이르렀는데 간단하게 결론만 한줄 적고 마는 것이다. 그러면 나중에 그 결론을 보고 누군가가 동일한 이슈로 또 논쟁을 할 수도 있다. 이럴 때는 그 결론에 이르게 된 과정을 적어주는 것이 좋다. 과정도 결과만큼 중요하기 때문이다. 적는 데 들인 몇 분의 수고는 수많은 사람들의 궁금증을 해소하고 시간을 절약하면 혼선을 방지해줄 것이다.
+
+**스펙 재사용하기**
+
+**소스코드로 스펙 작성하기**
+
+- 소프트웨어 스펙에서 빠질 수 없는 것이 바로 인터페이스다. 스펙에서 컴포넌트를 나누고 인터페이스를 정의하고 나면 상당 부분 소스코드로 옮겨 적는 과정을 거친다. 물론 소스코드로 바로 정의할 수 없는 인터페이스도 있지만 함수 호출형 인터페이스는 거의 그대로 소스코드로 옮겨간다. 이때 쉽게 옮겨갈 수 있도록 스펙 문서에 소스코드 형태와 최대한 유사하게 인터페이스를 정의하는 것이 좋다.
+
+**유닛 테스트로 스펙 작성하기**
+
+- 스펙의 일부를 적는 방법 중에 유닛 테스트를 적는 방법이 있다. 이렇게 유닛 테스트로 스펙을 적고 소프트웨어를 개발하는 방법을 TDD라고 부른다.
+- 스펙 및 설계의 한 방법인 TDD는 최종 목적인 소스코드를 작성하기 전에 소스코드를 테스트할 수 있는 코드를 먼저 작성하여 소스코드가 테스트 코드를 통과해 나가도록 진행하는 방법이다.
+
+![](AllAboutSwArchitecture_Image/2022-04-25-19-56-40.png)
+
+- TDD 의 장점 : 가장 큰 장점은 소프트웨어의 품질을 향상시킨다는 점이다. 코딩 시 지속적으로 자동 테스트되므로 코드 품질을 안정적으로 유지하며 추가 요구 사항이나 변경이 있어도 쉽게 적용할 수 있다. 원래 개발자가 아닌 유지보수 개발자가 개발을 하더라도 차후 변경으로 그동안 잘 동작하던 기능이 망가지는 것을 즉시 찾아낼 확률이 높다. 그래서 개발 시 효율성뿐만 아니라 유지보수 효율성도 증대된다. TDD를 수행하다 보면 컴포넌트 설계에 자연히 신경을 쓰게 된다. 테스트 코드는 컴포넌트가 해야 할 기능을 거의 포함하기 때문에 컴포넌트를 어떻게 설계하는 것이 좋을지도 동시에 생각하게 된다. 따라서 컴포넌트를 객체지향적으로 설계하게 되고 여러 예외 상황 처리에도 신경을 쓰게 된다. 또 TDD는 개발 시간을 단축해주는 효과도 있다. 처음에는 테스트 코드를 작성하느라 시간이 더 걸리는 것 같지만 디버깅 시간을 크게 줄여주고 수동 테스트에서 발견될 여러 버그를 사전에 찾아내서 고치기 때문에 전체 개발 시간이 짧아지는 효과가 있다.
+- TDD의 단점 : 테스트 코드를 먼저 작성해야 하는 것은 큰 부담이 아닐 수 없다. 거의 모든 프로젝트 일정이 빡빡해서 스펙도 대강 쓰거나 생략하는 일이 부지기수인데 익숙하지도 않은 테스트코드를 먼저 작성하는 것은 어렵다. 또 무작정 TDD를 적용한다고 될 일도 아니다. 객체지향 사고 방식과 설계 능력이 기본적으로 뒷받침되야 TDD 효과가 크다. 시간도 없고 설계 능력도 미흡한데 TDD 를 적용하자고 하면 한두 번 흉내 내다가 흐지부지될 것이다.
+
+**중복 최소화하기**
+
+**품질 특징 명시하기**
+
+**프로토타입 만들기**
+
+**스펙을 적기 위해서는 Why를 알아야 한다.**
+
