소프트웨어 스펙의 모든 것 10장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -340,3 +340,14 @@
 **스펙을 적기 위해서는 Why를 알아야 한다.**
 
 **인터페이스 개선하기/정의하기**
+
+### 10장 도구
+
+**SRS 작성을 돕는 도구**
+
+- 정보를 수집하는 툴 : 스펙을 작성하는 데는 오랜 시간에 걸쳐 수집된 정보가 매우 유용하게 쓰인다. 이전 버전의 제품을 사용하면서 수집된 기능 개선사항, 새 기능은 다음 버전을 개발하는 데 매우 중요한 요구사항이 된다. (이슈 관리시스템, 버그 관리시스템, 서비스 데스크 시스템, 위키 시스템)
+- 스펙을 작성하는 툴
+  - ![](AllAboutSwArchitecture_Image/2022-04-25-20-18-00.png)
+- 리뷰를 도와주는 툴
+  - ![]AllAboutSwArchitecture_Image/2022-04-25-20-18-39.png)
+- 다이어그램을 그리는 툴
