소프트웨어 스펙의 모든 것 10장

--- a/Document/ETC/소프트웨어 스펙의 모든것.md
+++ b/Document/ETC/소프트웨어 스펙의 모든것.md
@@ -349,5 +349,21 @@
 - 스펙을 작성하는 툴
   - ![](AllAboutSwArchitecture_Image/2022-04-25-20-18-00.png)
 - 리뷰를 도와주는 툴
-  - ![]AllAboutSwArchitecture_Image/2022-04-25-20-18-39.png)
+  - ![](AllAboutSwArchitecture_Image/2022-04-25-20-18-39.png)
 - 다이어그램을 그리는 툴
+
+**UI 작성 방법**
+
+소프트웨어 스펙의 중요한 부분 중 하나가 사용자 인터페이스(UI)다. 스펙에서는 최종 소프트웨어 UI를 그대로 표현하는 것이 아니라 소프트웨어와 사용자 간의 각 인터페이스를 논리적으로 사용하는 것이기 때문에, 스펙의 UI와 최종 UI는 많이 다르다. 우리는 이것을 보통 목업이라고 하며 와이어프레임wireframe이라고도 부른다.
+
+목업의 사전적 의미는 다음과 같다.
+
+> 비행기, 자동차 등의 개발 단계에서 각 부의 배치를 더욱 실제적으로 검토하기 위해 제작되는 실물 크기의 모형
+
+목업은 인터페이스를 최대한 간결하고 이해하기 쉽게 작성하는 것이 좋다. 실제와 똑같이 목업을 작성하면 이해관계자들은 소프트웨어가 이미 다 개발된 것으로 오해하기도 한다.
+
+**스펙 문서의 템플릿**
+
+## 2부 : SRS 작성법
+
+- 스킵
