--- a/Document/NotionAutomation/진행현황.md
+++ b/Document/NotionAutomation/진행현황.md
@@ -4,5 +4,9 @@
 
 > [notion-py](https://github.com/jamalex/notion-py#usage) <br/>
 
-- 당장 데모코드부터가 돌아가지 않아서 포기. 보아하니 노션에서는 블럭의 종류가 다양한데(컬렉션만 하더라도, Gallery 등) notion-py 가 이 모든 종류에 대해 지원을 해주지 않는 건지 내부적으로 오류가 있는 건지, 개인적으로 사용할 때 정상적으로 노션 내 데이터를 읽어올 수 없었다.
+- 당장 데모코드부터가 돌아가지 않아서 포기. 보아하니 노션에서는 블럭의 종류가 다양한데(컬렉션만 하더라도, Gallery 등) notion-py 가 이 모든 종류에 대해 지원을 해주지 않는 건지 내부적으로 오류가 있는 건지, 개인적으로 사용할 때 정상적으로 노션 문서를 읽어올 수 없었다.
 - 나쁜 놈들...
+
+> [공식 노션 API](https://developers.notion.com/docs/getting-started)
+
+- 노션에서 정식으로 개발자에게 제공하는 API 이다. 다음엔 요거다.
