노션 자동화 삽질 중

--- a/Document/NotionAutomation/진행현황.md
+++ b/Document/NotionAutomation/진행현황.md
@@ -10,3 +10,9 @@
 > [공식 노션 API](https://developers.notion.com/docs/getting-started)
 
 - 노션에서 정식으로 개발자에게 제공하는 API 이다. 다음엔 요거다.
+- [API: Update Block](https://developers.notion.com/reference/update-a-block)
+
+## 노션 API 통합 키 및 워크스페이스 DB 아이디
+
+- notion_database_id : `6485647f2f4b4bfbac195211e43f91b0`
+- notion_key(통합 API) : `secret_V03L7Q3wQGwizHR1KStIE5yT3m1PM36JJhUouWfEdTj`
