--- a/Document/NotionAutomation/NotionApiSample.ipynb
+++ b/Document/NotionAutomation/NotionApiSample.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -84,14 +84,12 @@
     "url = \"https://api.notion.com/v1/databases/63d758d87e41483ebab7def5d939f616\"\n",
     "\n",
     "headers = {\n",
-    "    \"Accept\": \"application/json\",\n",
     "    \"Notion-Version\": \"2022-02-22\",\n",
-    "    \"Content-Type\": \"application/json\",\n",
     "    \"Authorization\": \"Bearer secret_V03L7Q3wQGwizHR1KStIE5yT3m1PM36JJhUouWfEdTj\"\n",
     "}\n",
     "\n",
     "try:\n",
-    "    response = requests.get(url, headers=headers)\n",
+    "    response = requests.get(url=\"https://api.notion.com/v1/databases/63d758d87e41483ebab7def5d939f616\")\n",
     "    print(response.status_code)\n",
     "    print(response.text)\n",
     "except Exception as e:\n",
