Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -2,9 +2,31 @@
 
 ![](WebMassiveService_Image/2022-05-24-11-26-00.png)
 
+**하테나 소개**
+
+하테나(hatena)는 '지식 커뮤니티' 인력검색 서비스와 다이어리(블로그) 호스팅 
+서비스, 소셜 북마크 서비스 등을 개발해 운영하고 있는 일본의 인터넷 기업으로, 
+인터넷 서비스의 가장 매력적인 두 가지 요소인 'Fun'과 'Creativity'를 함께 
+추구하는 서비스, 생활 파트너로서 존재하는 서비스를 제공하고 있다.
+
 ## 1. 대규모 웹 서비스 개발 오리엔테이션
 
 전체 그림 파악하기
+
+**하테나의 서비스 규모**
+
+2009년 8월 기준 
+
+- 등록 사용자는 100만 명 이상, 1500만 UU(Unique User)/월
+- 수십 억 액세스/월(이미지 등으로의 액세스 제외)
+- 피크(peak) 시 회선 트래픽 양은 430Mbps
+- 하드웨어(서버)는 500대 이상
+
+100만 명 이상의 사용자들이 블로그를 쓰거나 북마크를 등록하고 있고, 우러간 1,500만 명 이상이 방문하고 있다. 이 방문자 수에 의해 월간 수십 억 액세스가 발생한다. 이 정도가 되면 일일 액세스 로그는 기본적으로 기가바이트(gigabyte) 크기가 되며, DB 서버가 저장하는 데이터 규모도 대략 기가바이트 수준, 많을 때는 테라바이트(terabyte) 정도가 된다.
+
+**소규모 서비스와 대규모 서비스의 차이**
+
+
 
 ## 2. 대규모 데이터 처리 입문
 
