Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -13,6 +13,8 @@
 
 전체 그림 파악하기
 
+### 대규모 서비스와 소규모 서비스
+
 **하테나의 서비스 규모**
 
 2009년 8월 기준 
@@ -25,6 +27,15 @@
 100만 명 이상의 사용자들이 블로그를 쓰거나 북마크를 등록하고 있고, 우러간 1,500만 명 이상이 방문하고 있다. 이 방문자 수에 의해 월간 수십 억 액세스가 발생한다. 이 정도가 되면 일일 액세스 로그는 기본적으로 기가바이트(gigabyte) 크기가 되며, DB 서버가 저장하는 데이터 규모도 대략 기가바이트 수준, 많을 때는 테라바이트(terabyte) 정도가 된다.
 
 **소규모 서비스와 대규모 서비스의 차이**
+
+- 확장성 확보, 부하분산 필요 : 서버 1대로 처리할 수 없는 대량의 액세스
+- 다중성 확보 : 시스템은 다중성을 지닌 구성, 즉 특정 서버가 고장 나거나 성능이 저하되더라도 서비스를 계속할 수 있는 구성으로 할 필요가 있다.
+- 효율적 운용 필요 : 서버 대수가 100대를 넘어섰을 때, 각 서버의 역할과 상태를 어떻게 관리할 것인가
+- 개발자 수, 개발방법의 변화
+
+**대규모 데이터량에 대한 대처**
+
+### 계속 성장하는 서비스와 대규모화의 벽
 
 
 
