--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -43,8 +43,25 @@
 
 ### 서비스 개발의 현장
 
+**하테나의 기술팀 체제**
 
+**하테나에서의 커뮤니케이션 방법**
 
+- 책에서 말하는 시기에 하테나는 임직원 40명 정도의 작은 기업
+
+**실제 서비스 개발**
+
+![](WebMassiveService_Image/2022-05-30-15-48-30.png)
+
+**개발에 사용하는 툴**
+
+- 프로그래밍 언어 : Perl, C/C++, JavaScript 등
+  - 서버-사이드(Server-side)인 웹 애플리케이션은 창업 때부터 Perl로 개발하고 있기 때문에, Perl을 사용한다. 검색 엔진 등 메모리 욕너이 엄격하거나 속도가 요구되는 곳에는 일부 C/C++등도 사용한다. 웹 애플리케이션의 사용자 인터페이스 개발은 별다른 선택의 여지없이 JavaScript를 사용한다.
+  - 프로그래밍 언어 선택 정책4은 '동일 레이어인 언어는 하나로 한정한다.'는 것이다. 예를 들면 근래의 웹 애플리케이션 개발에는 PHP, Python, Ruby 등의 스크립트 언어가 자주 사용된다. 개발자에 따라서는 이러한 언어가 기호에 맞는 사람도 있겠지만 기본은 Perl을 사용하도록 부탁하고 있다. 이는 앞서 언급한 표준화의 관점에서 중요하다. 같은 언어를 사용하면 자사 내에서 노하우가 널리 통용되고 팀 간 이동도 원활하다. 다른 사람이 만든 시스템의 유지보수도 용이하다.
+- 주요 미들웨어 : 마찬가지로 표준화 관점에서 이용할 미들웨어와 프레임워크도 모든 팀에서 통일, 주요 미들웨어는 Linux, Apache, MySQL, memcached 처럼 웹 개발의 기본에 해당되는 것들이다.
+- 웹 애플리케이션 프레임워크 : 자체 개발한 Ridge, 심플하고 직관적으로 사용할 수 있는 MVC 프레임워크다.
+- 주위 머신의 OS 및 에디터 : 기본적으로는 자유. 프레임워크나 미들웨어와 달리 그 외의 영역에서는 자유다.
+- 버전관리는 git, BTS(Bug Tracking System)는 독자 개발한 '아사카'
 
 ## 2. 대규모 데이터 처리 입문
 
