Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -67,6 +67,37 @@
 
 메모리와 디스크, 웹 애플리케이션과 부하
 
+**대규모 데이터 특유의 환경 알기**
+
+### 하테나 북마크의 데이터 규모
+
+**하테나 북마크를 예로 본 대규모 데이터**
+
+**하테나 북마크의 데이터 규모**
+
+- ![](WebMassiveService_Image/2022-05-31-14-33-22.png)
+- 대규모라고 하지만 Google이나 Yahoo!가 사용하고 있는 규모가 되면 여기서 더 나아가 테라바이트, 페타바이트가 되므로 이는 초대규모이며, 이와 비교하자면 하테나는 대규모~중규모 정도이다.
+
+**대규모 데이터로의 쿼리**
+
+### 대규모 데이터 처리의 어려운 점
+
+**대규모 데이터는 어떤 점이 어려운가?**
+
+- '메모리 내에서 계산할 수 없다' : 메모리에 올리지 못하면 계속 디스크를 읽어가면서 검색하게 되어 검색 시간이 늘어난다.
+
+**메모리와 디스크의 속도차**
+
+- 메모리는 디스크보다 10만~100만배 정도 차이가 난다.
+
+**디스크는 왜 늦을까?**
+
+- 디스크는 동축 상에 '원반'(disk)이 쌓여 있다. 이 원반이 회전하고 있고 여기서 데이터를 읽어낸다. 즉 메모리에서는 특정 지점에서 다른 지점으로 포인터를 이동할 때 단순 전기작용으로 동작한다면 디스크에서는 헤드 회전 등의 물리적인 동작을 수반하고 있다.
+
+**OS 레벨에서의 연구**
+
+
+
 ## 3. OS 캐시와 분산
 
 대규모 데이터를 효율적으로 처리하는 원리
