--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -96,7 +96,19 @@
 
 **OS 레벨에서의 연구**
 
+- 디스크는 느리지만 OS는 이것을 어느 정도 커버하는 작용을 한다. OS는 연속된 데이터를 같은 위치에 쌓는다. 그리고 나서 데이터를 읽을 때 1바이트씩 읽는 것이 아니라 4KB(killobytes) 정도를 한꺼번에 읽도록 되어 있다.
+- 이렇게 해서 비슷한 데이터를 서로 가까운 곳에 두어 1번이 디스크 회전으로 읽는 데이터 수를 많게 한다. 그 결과로 디스크의 회전횟수를 최소화할 수 있게 된다. 이러한 작용을 해서 디스크를 가능한 한 회전시키지 않아도 되도록 하고 있다. 하지만 결국 회전 1회당 밀리초 단위이므로 역시 메모리와의 속도차를 피할 수 있는 것은 아니다.
 
+**전송속도, 버스의 속도차**
+
+- 메모리나 디스크 모두 CPU와 버스로 연결되어 있다. 이 버스의 속도에서도 상당한 차이가 있다. 먼저 '탐색'과 '전송'의 차이에 유의하기 바란다. 앞서 본 것은 메모리 혹은 디스크상에 있는 임의의 데이터를 탐색할 때의 속도차, 여기서 살펴보고자 하는 것은 전송속도다. 찾은 데이터를 디스크에서 메모리로 보내거나 메모리에서 CPU로 보내는 등 컴퓨터 내부에서 전송하기 위한 속도다.
+- 메모리와 CPU는 상당히 빠른 버스로 연결되어 있으므로, 7.5GB/초 정도 나오지만, 디스크는 58M/초 정도밖에 나오지 않는다. 따라서 전송해오는 중에도 시간이 걸린다. 데이터가 많아지면 많아질수록 디스크와 메모리의 차이도 나타나게 되므로 전송속도에서도 디스크는 늦어진다.
+- 최근 SSD(Solid State Drive)가 나오고 있다. SSD는 물리적인 회전이 아니므로 Seek(탐색)은 빠르지만 버스 속도가 병목이 되거나 그 밖에 구조에 기인하는 면이 있어서 메모리만큼이 속도는 나오지 않는다.
+
+**Linux 단일 호스트의 부하**
+
+![](WebMassiveService_Image/2022-05-31-14-59-53.png)
+![](WebMassiveService_Image/2022-05-31-15-00-13.png)
 
 ## 3. OS 캐시와 분산
 
