--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -110,6 +110,28 @@
 ![](WebMassiveService_Image/2022-05-31-14-59-53.png)
 ![](WebMassiveService_Image/2022-05-31-15-00-13.png)
 
+### 규모조정의 요소
+
+**규모조정, 확장성**
+
+- 웹 서비스에서는 고가의 빠른 하드웨어를 사서 성능을 높이는 '스케일업(scale-up)' 전략보다는 저가이면서 일반적인 성능이 하드웨어를 많이 나열해서 시스템 전체 성능을 올리는 '스케일아웃(scale-out)' 전략이 주류이다. 개별적인 이유는 다양하겠지만, 스케일아웃 전략이 더 나은 이유는 웹 서비스에 적합한 형태이고 비용이 저렴하다는 점과 시스템 구성에 유연성이 있다는 점이 포인트다.
+- 가격이 10배인 제품이 속도나 신뢰성 면에서 10배만큼 발휘하는 것은 아니다.
+
+**규모조정의 요소**
+
+- 스케일아웃은 하드웨어를 나열해서 성능을 높이는, 즉 하드웨어를 횡으로 전개해서 확장성을 확보해가게 된다. 이때 cpu 부하의 확장성을 확보하기는 쉽다.
+- 예를 들면 웹 애플리케이션에서 계산을 수행하고 있을 때, 즉 HTTP 요청을 받아 DB에 질의하고 DB로부터 응답받은 데이터를 가공해서 HTML로 클라이언트에 반환할 때는 기본적으로 CPU부하만 소요되는 부분이다. 이것은 서버 구성 중에 프록시나 AP 서버(application Server)가 담당할 일이다.
+- 한편 DB 서버 측면에서는 I/O 부하가 걸린다.
+
+**웹 애플리케이션과 부하의 관계**
+
+![](WebMassiveService_Image/2022-05-31-15-11-49.png)
+
+- 웹 애플리케이션의 3단 구조에는 프록시, AP 서버, DB 서버가 있다.
+- 요청이 프록시->AP서버->DB 순서로 전달되고 DB에서는 I/O가 발생하며, 이 I/O가 발생해서 되돌아온 콘텐츠를 변경한 후 클라이언트로 응답한다. AP 서버에는 I/O 부하가 걸리지 않고 DB 측에 I/O 부하가 걸린다.
+- AP 서버는 CPU 부하만 걸리므로 분산이 간단하다. 그 이유는 기본적으로 데이터를 분산해서 갖고 있는 것이 아니므로 동일한 호스트가 동일하게 작업을 처리하기만 하면 분산할 수 있다. 결국 새로운 서버를 추가하고자 한다면 원래 있던 서버와 완전히 동일한 구성을 갖는 서버, 심하게 말하면 복사본을 마련해서 추가하면 된다. 요청을 균등하게 분산하는 것은 로드밸런서(load balancer)라는 장치가 해준다.
+- I/O 부하에는 문제가 있다. DB를 늘린다고 하면 데이터 동기화를 어떻게 해야할 지 문제가 생긴다.
+
 ## 3. OS 캐시와 분산
 
 대규모 데이터를 효율적으로 처리하는 원리
