--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -132,6 +132,14 @@
 - AP 서버는 CPU 부하만 걸리므로 분산이 간단하다. 그 이유는 기본적으로 데이터를 분산해서 갖고 있는 것이 아니므로 동일한 호스트가 동일하게 작업을 처리하기만 하면 분산할 수 있다. 결국 새로운 서버를 추가하고자 한다면 원래 있던 서버와 완전히 동일한 구성을 갖는 서버, 심하게 말하면 복사본을 마련해서 추가하면 된다. 요청을 균등하게 분산하는 것은 로드밸런서(load balancer)라는 장치가 해준다.
 - I/O 부하에는 문제가 있다. DB를 늘린다고 하면 데이터 동기화를 어떻게 해야할 지 문제가 생긴다.
 
+### 대규모 데이터를 다루기 위한 기초지식
+
+**대규모 데이터를 다루는 세 가지 급소**
+
+- 첫번째는 어떻게 하면 디스크 작업을 최소화하고 메모리에처 처리하도록 해서 성능을 끌어올릴 수 있을까?? 이다.
+- 두번째는 데이터량 증가에 강한 알고리즘을 사용하는 것이다.
+- 세번째는 데이터 압축이나 검색기술과 같은 테크닉 활용
+
 ## 3. OS 캐시와 분산
 
 대규모 데이터를 효율적으로 처리하는 원리
