Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -144,6 +144,18 @@
 
 대규모 데이터를 효율적으로 처리하는 원리
 
+### OS의 캐시 구조
+
+- 원래 OS에는 디스크 내의 데이터에 빠르게 액세스할 수 있도록 구조가 갖춰져 있다. OS는 메모리를 이용해서 디스크 액세스를 줄인다. 원리를 알고 이를 전제로 애플리케이션을 작성하면 OS에 상당부분을 맡길 수 있다.
+- Linux의 경우 페이지 캐시(page cache)나 파일 캐시(file cache), 버퍼 캐시(buffer cache)라고 하는 캐시 구조를 갖추고 있다.
+
+![](WebMassiveService_Image/2022-05-31-15-45-47.png)
+![](WebMassiveService_Image/2022-05-31-15-46-07.png)
+![](WebMassiveService_Image/2022-05-31-15-46-25.png)
+![](WebMassiveService_Image/2022-05-31-15-46-42.png)
+
+### I/O부하를 줄이는 방법
+
 ## 4. 분산을 고려한 MySQL 운용
 
 ## 5. 대규모 데이터 처리 실전 입문
