Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -156,6 +156,14 @@
 
 ### I/O부하를 줄이는 방법
 
+**캐시를 전제로 한 I/O를 줄이는 방법**
+
+- 데이터 규모에 비해 물리 메모리가 크면 전부 캐싱할 수 있으므로 이 점을 생각할 것. 다루고자 하는 데이터의 크기에 주목하는 것이다.
+- 대규모 데이터 처리에는 데이터 압축률이 중요한데, 압축해서 저장해두면 디스크 내용을 전부 그대로 캐싱해둘 수 있는 경우가 많다. 2GB의 메모리를 가진 머신에 4GB 텍스트 파일을 올릴 수는 없지만, 만약 파일을 2GB로 압축할 수 있다면 메모리에 올릴 수 있다.
+- 경제적인 비용과 밸런스를 고려해야 한다.
+
+### 국소성을 살리는 분산
+
 ## 4. 분산을 고려한 MySQL 운용
 
 ## 5. 대규모 데이터 처리 실전 입문
