Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -164,6 +164,25 @@
 
 ### 국소성을 살리는 분산
 
+- 아래 그림에서는 데이터를 그대로 복제했다. 그와 달리 데이터에 대한 액세스 패턴을 고려해서 분산시키는 것을 국소성을 고려한 분산이라고 한다.
+- 액세스 패턴 A일 때는 1로, 액세스 패턴 B일 때는 2로 -> 데이터로 액세스하는 경향에 대한 처리방식에 따라 특정한 방향으로 치우치는 경우가 자주 있다.
+- ![](WebMassiveService_Image/2022-06-02-18-58-41.png)
+
+**파티셔닝**
+
+- 파티셔닝(partitioning)은 한 대였던 DB 서버를 여러 대의 서버로 분할하는 방법. 분할 방법 중 간단한 것은 '테이블 단위 분할'이다.
+- 활용 예시로 검색 봇은 그 특성상 아주 오래된 웹 페이지에도 액세스하러 온다. 사람의 경우라면 좀처럼 액세스하지 않을 페이지에도 액세스하고, 또한 광범위하게 액세스한다. 그렇게 되면 캐시가 적용하기 어렵지만, 사람과 다르게 봇에 대해서는 빠르게 응답을 해야 할 필요가 없으므로 섬으로 나눠놓는다. 한편 봇 이외에 액세스, 즉 사용자로부터의 액세스는 최상위 페이지나 인기 엔트리 페이지 등 최신, 인기 페이지에 거의 액세스가 집중되므로 빈번하게 참조되는 부분은 캐싱하기 쉽다.
+- ![](WebMassiveService_Image/2022-06-02-19-09-54.png)
+
+**요청 패턴을 '섬'으로 분할**
+
+- '용도별로 시스템을 섬으로 나누는 방법'
+
+**페이지 캐시를 고려한 운용의 기본 규칙**
+
+- OS 기동 직후에 서버를 투입하지 않는다. 캐시가 없으므로 오직 디스크 액세스만 발생하기 때문이다.
+- 성능평가는 캐시가 최적화되었을 때 수행한다.
+
 ## 4. 분산을 고려한 MySQL 운용
 
 ## 5. 대규모 데이터 처리 실전 입문
