Update 대규모 웹 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -185,6 +185,19 @@
 
 ## 4. 분산을 고려한 MySQL 운용
 
+### 인덱스를 올바르게 운영하기
+
+**분산을 고려한 MySQL 운용, 세 가지 포인트**
+
+**OS 캐시 활용**
+
+**인덱스의 중요성**
+
+- 알고리즘 / 데이터 구조에서 탐색을 할 때는 기본적으로 트리(탐색트리)가 널리 사용된다. 인덱스는 주로 탐색을 빠르게 하기 위한 것으로, 그 내부 데이터 구조로는 트리가 사용된다. (MySQL 은 기본적으로 B+ 트리)
+  - ![](WebMassiveService_Image/2022-06-02-19-26-35.png)
+  - ![](WebMassiveService_Image/2022-06-02-19-28-35.png)
+  - 여기서 B트리는 블록 단위의 데이터를 디스크의 한 블록에 할당할 수 있다. 그래서 디스크 seek 발생횟수를 노드를 찾아갈 때만으로 최소화할 수 있는 것. 동일한 노드의 데이터는 동일한 블록에 있으니 같은 노드 내의 데이터는 seek 없이 탐색할 수 있다.(이진트리의 경우 노드를 모아서 디스크 블록의 저장하는 식의 처리가 어렵다.)
+
 ## 5. 대규모 데이터 처리 실전 입문
 
 애플리케이션 개발의 급소
