Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -198,6 +198,25 @@
   - ![](WebMassiveService_Image/2022-06-02-19-28-35.png)
   - 여기서 B트리는 블록 단위의 데이터를 디스크의 한 블록에 할당할 수 있다. 그래서 디스크 seek 발생횟수를 노드를 찾아갈 때만으로 최소화할 수 있는 것. 동일한 노드의 데이터는 동일한 블록에 있으니 같은 노드 내의 데이터는 seek 없이 탐색할 수 있다.(이진트리의 경우 노드를 모아서 디스크 블록의 저장하는 식의 처리가 어렵다.)
 
+### MySQL의 분산
+
+**MySQL의 레플리케이션 기능**
+
+- MySQL의 레플리케이션Replication 기능
+  - 마스터(master)를 정하고 마스터를 팔로우하는 서버Slave를 정하면 마스터에 쓴 내용을 슬레이브가 폴링(poling)해서 동일한 내용으로 자신을 갱신하는 기능이다. 슬레이브는 마스터의 레플리카Replica가 되는 것이다. 이렇게 해서 동일한 내용의 서버를 여러 대 마련할 수가 있다.
+- ![](WebMassiveService_Image/2022-06-03-19-05-35.png)
+- 레플리케이션 기반 서버를 여러 대 준비하게 되면 AP 서버에서는 로드밸런서를 경유해서 슬레이브로 질의한다. 이렇게 해서 쿼리를 여러 대 분산할 수 있다.
+- 이때 애플리케이션 구현에서 select 등 참조 쿼리만 로드밸런스로 흘러가도록 한다. 갱신 쿼리는 마스터로 직접 던진다.
+
+**마스터/슬레이브의 특징**
+
+- 참조 쿼리는 확장하고 갱신 쿼리는 확장하지 않는다.
+- 웹 애플리케이션에서 대략 90% 이상이 참조계열 쿼리다. 웹에서 참조계열에 비하면 마스터가 병목이 되어 곤란한 상황이 발생하는 경우는 그렇게 많지 않다.
+
+### MySQL의 스케일아웃과 파티셔닝
+
+**MySQL의 스케일아웃 전략**
+
 ## 5. 대규모 데이터 처리 실전 입문
 
 애플리케이션 개발의 급소
