Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -217,6 +217,12 @@
 
 **MySQL의 스케일아웃 전략**
 
+**파티셔닝의 상반관계**
+
+- 파티셔닝의 좋은 점은 부하가 내려가고 국소성이 늘어나서 캐시 효과가 높아진다는 것이다.
+- 운용이 복잡해진다. 서버가 다수로 나누어지면 서로 용도 또한 나뉘어진다.
+- 고장률이 높아진다.
+
 ## 5. 대규모 데이터 처리 실전 입문
 
 애플리케이션 개발의 급소
