--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -225,7 +225,25 @@
 
 ## 5. 대규모 데이터 처리 실전 입문
 
-애플리케이션 개발의 급소
+**애플리케이션 개발의 급소**
+
+- 배치 처리로 RDBMS에서 데이터를 추출해서 별도의 인덱스 서버와 같은 것을 만들고, 이 인덱스 서버에 웹 애플리케이션에서 RPC(Remote Procedure Call)등으로 액세스하는 방법을 사용한다.
+- RPC, 웹 API : 예전에는 웹 API라는 것이 일반적이지 않았으므로 대체적으로 원격에 놓인 데이터 구조나 파일을 검색하고자 할 때는 RPC라고 하는, 네트워크를 경유해서 프로토콜이 독자적으로 정해져 있는 것을 사용하는 경우가 많았다.그러나 최근에는 이 프로토콜을 JSON + HTTP, 즉 웹 API로 처리하는 일이 더 많은 것 같다.
+
+**용도특화형 인덱싱**
+
+- 데이터를 정기적으로 뽑아낸다. 
+- 뽑아낸 데이터에서 데이터 구조를 구축(튜닝)
+  - 검색용 역 인덱스
+  - 키워드 링크용 Trie 등
+  - 범용적인 목적으로 구성된 데이터 구조보다 특정 목적을 위해 튜닝된 데이터 구조가 다루기에 훨씬 효율적이다.
+- 구조화 데이터를 저장한 서버를 C++ 로 개발, RPC로 액세스
+
+![](WebMassiveService_Image/2022-06-07-19-39-09.png)
+
+- 하테나 검색엔진에서는 미리 키워드를 추출 후 Trie 기반의 정규 분포 구조로 튜닝한 뒤에 사용한다고 한다.
+
+### 용도특화형 인덱싱
 
 ## 6. [과제] 압축 프로그래밍
 
