Update 대규모 웹 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -243,11 +243,15 @@
 
 - 하테나 검색엔진에서는 미리 키워드를 추출 후 Trie 기반의 정규 분포 구조로 튜닝한 뒤에 사용한다고 한다.
 
-### 용도특화형 인덱싱
+### 이론과 실전 양쪽과의 싸움
 
 ## 6. [과제] 압축 프로그래밍
 
 데이터 크기, I/O 고속화와의 관계 인식하기
+
+- 정수 데이터를 VB Code(Variable Byte Code) 알고리즘으로 압축하기
+- 아래 그림에서 고정길이 바이너리 부호에서 정수는 32비트, 그러니까 4바이트 크기이지만 5와 130은 모두 하위 1바이트 외에는 사용하지 않는다. 여기 앞부분의 바이트를 제거하고 최소한의 바이트로 정보를 표현하는 것이 VB Code 이다.
+- ![](WebMassiveService_Image/2022-06-08-18-25-53.png)
 
 ## 7. 알고리즘 실용화
 
